--- a/Read/ReadMeWiki/00.方案实践/04.ANR治理优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/04.ANR治理优化实践.md
@@ -25,7 +25,7 @@
 
 ### 04.线上ANR监控方案
 - 怎么知道ANR呢
-    - 通过FileOberver监控上述的ANR信息文件的变化，如果这个文件发生了变化，那就说明发生了ANR，那便可以把它上报到服务器，进行详细的分析；【高版本需注意权限问题】。
+    - 通过FileObserver监控上述的ANR信息文件的变化，如果这个文件发生了变化，那就说明发生了ANR，那便可以把它上报到服务器，进行详细的分析；【高版本需注意权限问题】。
 
 
 ### 参考
