--- a/Read/ReadMeWiki/01.大型方案/01.组件化开发优化实践.md
+++ b/Read/ReadMeWiki/01.大型方案/01.组件化开发优化实践.md
@@ -228,6 +228,9 @@
         exclude group: 'android.support.v4'//根据包名排除 
     }
     ```
+- aar和jar有何区别？
+    - jar与平台无关，只包含了class文件与清单文件，不包含资源文件，如图片等所有res中的文件
+    - aar作为Android库项目的二进制归档文件，包含所有资源，class以及res资源文件
 
 
 
