--- a/Read/ReadMeWiki/00.方案实践/02.崩溃治理优化总结.md
+++ b/Read/ReadMeWiki/00.方案实践/02.崩溃治理优化总结.md
@@ -4,7 +4,6 @@
     - 1.2 思考一些问题
     - 1.3 Crash指标
     - 1.4 Crash治理原则
-    - 1.5 分析崩溃日志
 - 02.Crash常见治理
     - 2.1 常见Crash分类
     - 2.2 空指针崩溃问题
@@ -30,8 +29,7 @@
     - 7.3 Lint检查
 - 08.Looper拦截崩溃
     - 8.1 能否用Looper拦截崩溃
-    - 8.2 思考几个问题分析
-    - 8.3 App启动时自动开启Looper
+    - 8.2 使用Loop拦截崩溃
     - 8.4 拦截主线程崩溃
     - 8.5 拦截子线程崩溃
     - 8.6 最后的总结建议
@@ -46,8 +44,9 @@
 
 ### 01.前沿概述
 #### 1.1 背景前沿介绍
-- Crash率是衡量一个App好坏的重要指标之一
+- `Crash`率是衡量一个App好坏的重要指标之一
     - 如果你忽略了它的存在，它就会愈演愈烈，最后造成部分用户的流失，而且影响功能的正常使用，让体验不好。
+
 
 
 #### 1.2 思考一些问题
@@ -68,72 +67,56 @@
     - PV Crash率：针对用户使用次数的统计，评估相关Crash影响的严重程度。
     - 大家可以根据自己的需要选择合适的指标，需要注意的是，需要确保一直使用同一种衡量方式。
 - Crash率评价。那么，我们App的Crash率降低多少才能算是一个正常水平或优秀的水平呢？ 
-    - Java与Native的总崩溃率必须在千分之二以下。
-    - Crash率万分位为优秀
+    - Java与Native的总崩溃率必须在千分之二以下。Crash率万分位为优秀
 - 注意，以上说的都是UV崩溃率。
 
 
 
 #### 1.4 Crash治理原则
-- **对于Crash的治理，尽量遵守以下三点原则**：
-    - 由点到面。一个Crash发生了，我们不能只针对这个Crash的去解决，而要去考虑这一类Crash怎么去解决和预防。只有这样才能使得这一类Crash真正被解决。
-    - 异常不能随便吃掉。随意的使用try-catch，只会增加业务的分支和隐蔽真正的问题，要了解Crash的本质原因，根据本质原因去解决。catch的分支，更要根据业务场景去兜底，保证后续的流程正常。
-    - 预防胜于治理。当Crash发生的时候，损失已经造成了，我们再怎么治理也只是减少损失。尽可能的提前预防Crash的发生，可以将Crash消灭在萌芽阶段。
+- 由点到面。
+    - 一个`Crash`发生了，不能只针对这个`Crash`的去解决，而要去考虑这一类Crash怎么去解决和预防。只有这样才能使得这一类Crash真正被解决。
+- 异常不能随便吃掉
+    - 随意的使用`try-catch`，只会增加业务的分支和隐蔽真正的问题，要了解`Crash`的本质原因，根据本质原因去解决。**catch的分支，更要根据业务场景去兜底，保证后续的流程正常**。
+- 先止损再根治
+    - 当`Crash`发生的时候，损失已经造成了，我们再怎么治理也只是减少损失。尽可能的提前预防Crash的发生，可以将Crash消灭在萌芽阶段。
+- 事后复现和总结
+    - 尽量去找到复现问题的链路，方便排查问题，修改后是否再次出现。有些bug如果找不到，那么思考能否上传info日志，通过技术埋点去排查崩溃链路问题。
 
-
-#### 1.5 分析崩溃日志
-- 确认重点（内存 & 线程 需特别注意，很多崩溃都是由于它们使用不当造成的）
-    - 确认严重程度
-        - 如果一时半会解决不了，那么能否先止损，采用降级策略。延期修复，如果是非要解决，那么解决完后即通过灰度测试发版，及时跟进问题。
-    - 崩溃基本信息
-        - Java 崩溃（比如 NullPPointerException 是空指针，OutOfMemoryError 是资源不足）
-        - Native 崩溃（比较常见的是有 SIGSEGV 和 SIGABRT）
-        - ANR（先看看主线程的堆栈，是否是因为锁等待导致。接着看看 ANR 日志中 iowait、CPU、GC、system server 等信息，进一步确定是 I/O 问题，或是 CPU 竞争问题，还是由于大量 GC 导致卡死）
-    - Logcat。
-        - 从 Logcat 中我们可以看到当时系统的一些行为跟手机的状态，当从一条崩溃日志中无法看出问题的原因，或者得不到有用信息时，不要放弃，建议查看相同崩溃点下的更多崩溃日志。
-- 查找共性（机型、系统、ROM、厂商、ABI）
-    - 机型、系统、ROM、厂商、ABI，这些采集到的系统信息都可以作为维度聚合，共性问题例如是不是因为安装了 Xposed，是不是只出现在 x86 的手机，是不是只有三星这款机型，是不是只在 Android 8.0 的系统上。
-- 复现问题
-    - 尽量去找到复现问题的链路，方便排查问题。有些bug如果找不到，那么思考能否上传info日志，通过技术埋点去排查崩溃链路问题。
 
 
 ### 02.Crash常见治理
 #### 2.1 常见Crash分类
-- 常规Crash发生的原因主要是由于开发人员编写代码不小心导致的。
-    - 解决这类Crash需要由点到面，根据Crash引发的原因和业务本身，统一集中解决。
-- 常见的Crash类型包括：
+- 常规`Crash`发生的原因主要是由于开发人员编写代码不小心导致的。
+    - 解决这类`Crash`需要由点到面，根据`Crash`引发的原因和业务本身，统一集中解决。
+- 常见的`Crash`类型包括：
     - 空节点、角标越界、类型转换异常、实体对象没有序列化、数字转换异常、Activity或Service找不到等。
-    - 这类Crash是App中最为常见的Crash，也是最容易反复出现的。在获取Crash堆栈信息后，解决这类Crash一般比较简单，更多考虑的应该是如何避免。
+    - 这类Crash是App中最为常见的Crash，也是最容易反复出现的。在获取Crash堆栈信息后，解决这类Crash一般比较简单，**更多考虑的应该是如何避免**。
 
 
 
 #### 2.2 空指针崩溃问题
-- NullPointerException是我们遇到最频繁的，造成这种Crash一般有两种情况：
-    - 对象本身没有进行初始化就进行操作。
-    - 对象已经初始化过，但是被回收或者手动置为null，然后对其进行操作。
+- `NullPointerException`是遇到最频繁的，造成这种Crash一般有两种情况：
+    - 对象本身没有进行初始化就进行操作；对象已经初始化过，但是被回收或者手动置为null，然后对其进行操作。
 - 针对第一种情况导致的原因有很多，可能是开发人员的失误、API返回数据解析异常、进程被杀死后静态变量没初始化导致，我们可以做的有：
-    - 对可能为空的对象做判空处理。
-    - 养成使用@NonNull和@Nullable注解的习惯。
-    - 尽量不使用静态变量，万不得已使用SharedPreferences来存储。
-- 针对第二种情况大部分是由于Activity/Fragment销毁或被移除后，在Message、Runnable、网络等回调中执行了一些代码导致的，我们可以做的有：
-    - Message、Runnable回调时，判断Activity/Fragment是否销毁或被移除；加try-catch保护；Activity/Fragment销毁时移除所有已发送的Runnable。
-    - 封装LifecycleMessage/Runnable基础组件，并自定义Lint检查，提示使用封装好的基础组件。
-    - 在BaseActivity、BaseFragment的onDestroy()里把当前Activity所发的所有请求取消掉。
+    - 对可能为空的对象做判空处理；养成使用@NonNull和@Nullable注解的习惯；如果是kotlin避免使用!!；尽量不使用静态变量存储跨页面数据。
+- 针对第二种情况大部分是由于Activity/Fragment销毁或被移除后，在Message、Runnable、网络等回调中执行了一些代码导致的，可以做的有：
+    - `Message`、`Runnable`回调时，判断Activity/Fragment是否销毁或被移除；加try-catch保护；Activity/Fragment销毁时移除所有已发送的Runnable。
+    - 封装`LifecycleMessage`/`Runnable`基础组件，并自定义Lint检查，提示使用封装好的基础组件。在BaseActivity、BaseFragment的onDestroy()里把当前Activity所发的所有请求取消掉。
 
 
 #### 2.3 索引越界异常
-- 这类Crash常见于对RecyclerView的操作和多线程下对容器的操作。
-    - 针对RecyclerView中造成的IndexOutOfBoundsException，经常是因为外部也持有了Adapter里数据的引用(如在Adapter的构造函数里直接赋值)，这时如果外部引用对数据更改了，但没有及时调用notifyDataSetChanged()，则有可能造成Crash，对此我们封装了一个BaseAdapter，数据统一由Adapter自己维护通知，这两类Crash目前得到了统一的解决。
+- 这类`Crash`常见于对`RecyclerView`的操作和多线程下对容器的操作。
+    - 针对`RecyclerView`中造成的`IndexOutOfBoundsException`，经常是因为外部也持有了Adapter里数据的引用(如在Adapter的构造函数里直接赋值)，这时如果外部引用对数据更改了，但没有及时调用`notifyDataSetChanged()`，则有可能造成Crash，对此我们封装了一个BaseAdapter，数据统一由Adapter自己维护通知，这两类Crash目前得到了统一的解决。
 - 注意有些容器是线程不安全的
-    - 所以如果在多线程下对其操作就容易引发IndexOutOfBoundsException。常用的如JDK里的ArrayList和Android里的SparseArray、ArrayMap，同时也要注意有一些类的内部实现也是用的线程不安全的容器，如Bundle里用的就是ArrayMap。
+    - 所以如果在多线程下对其操作就容易引发`IndexOutOfBoundsException`。常用的如JDK里的ArrayList和Android里的SparseArray、ArrayMap，同时也要注意有一些类的内部实现也是用的线程不安全的容器，如Bundle里用的就是ArrayMap。
 
 
 #### 2.4 核心catch上报
-- 核心try-catch建议增加APM异常上报
+- 核心`try-catch`建议增加APM异常上报
     - 对于一些特殊情况，比如说，开发过程当中或代码中出现了一些catch代码块，捕获住了异常，让程序不崩溃，这其实是不合理的，程序虽然没有崩溃，当时程序的功能已经变得不可用。
-    - 所以，这些被catch的异常我们也需要上报上来，这样我们才能知道用户到底出现了什么问题而导致的异常。
+    - 所以，这些被`catch`的异常我们也需要上报上来，这样我们才能知道用户到底出现了什么问题而导致的异常。
 - 如何捕获下层基础库异常，上报到APM？
-    - 举个例子，比如你是在app壳module集成APM，但是现在你想统计一些基础lib库module(被app依赖)的异常。显然没办法直接做到……
+    - 举个例子，比如你是在app壳module集成APM，但是现在你想统计一些基础lib库module(被app依赖)的异常。显然没办法直接做到……可以间接通过接口回调来上报异常。
 
 
 #### 2.5 不要随意catch
@@ -141,8 +124,8 @@
 
 #### 2.6 Crash长效治理
 - 开发阶段
-    - Crash的长效治理需要从开发阶段抓起，从长远来说，更好的代码质量将带来更好的稳定性，我们可以从以下两个角度来提升代码质量。
-    - 统一编码规范、增强编码功底、技术评审、增强CodeReview机制；架构优化，能力收敛(即将一些常见的操作进行封装)，统一容错：如在网络库utils中统一对返回信息进行预校验，如不合法就直接不走接下来的流程。
+    - `Crash`的长效治理需要从开发阶段抓起，从长远来说，更好的代码质量将带来更好的稳定性，我们可以从以下两个角度来提升代码质量。
+    - 统一编码规范、增强编码功底、技术评审、增强`CodeReview`机制；架构优化，能力收敛(即将一些常见的操作进行封装)，统一容错：如在网络库utils中统一对返回信息进行预校验，如不合法就直接不走接下来的流程。
 - 测试阶段
     - 除了功能测试、自动化测试、回归测试、覆盖安装等常规测试流程之外，还需要针对特殊场景、机型等边界进行测试：如服务端返回异常数据、服务端宕机等情况。
 - 合码阶段
@@ -162,10 +145,10 @@
     at android.os.BinderProxy.destroy(Native Method)
     at android.os.BinderProxy.finalize(Binder.java:459)
     ```
-- 众所周知，Android的机型众多，碎片化严重，各个硬件厂商可能会定制自己的ROM，更改系统方法，导致特定机型的崩溃。发现这类Crash，主要靠云测平台配合自动化测试，以及线上监控，这种情况下的Crash堆栈信息很难直接定位问题。下面是常见的解决思路：
+- 众所周知，`Android`的机型众多，碎片化严重，各个硬件厂商可能会定制自己的ROM，更改系统方法，导致特定机型的崩溃。发现这类`Crash`，主要靠云测平台配合自动化测试，以及线上监控，这种情况下的Crash堆栈信息很难直接定位问题。下面是常见的解决思路：
     - 查找可能的原因。（但通过操作路径和日志，我们可以找到一些怀疑的点）
     - 尝试规避（查看可疑的代码调用，是否使用了不恰当的 API，是否可以更换其他的实现方式规避，或者尝试修改代码逻辑来进行规避）
-    - Hook 解决（ Java Hook 和 Native Hook）。Java Hook主要靠反射或者动态代理来更改相应API的行为，需要尝试找到可以Hook的点，一般Hook的点多为静态变量，同时需要注意Android不同版本的API，类名、方法名和成员变量名都可能不一样，所以要做好兼容工作；Native Hook原理上是用更改后方法把旧方法在内存地址上进行替换，需要考虑到Dalvik和ART的差异；相对来说Native Hook的兼容性更差一点，所以用Native Hook的时候需要配合降级策略。
+    - Hook 解决（ Java Hook 和 Native Hook）。Java Hook主要靠反射或者动态代理来更改相应API的行为，需要尝试找到可以Hook的点，一般Hook的点多为静态变量，同时需要注意Android不同版本的API，类名、方法名和成员变量名都可能不一样，所以要做好兼容工作；Native Hook原理上是用更改后方法把旧方法在内存地址上进行替换，需要考虑到Dalvik和ART的差异；相对来说`Native Hook`的兼容性更差一点，所以用Native Hook的时候需要配合降级策略。
 - 如果通过前两种方式都无法解决怎么办
     - 那就只能尝试反编译ROM，寻找解决的办法。这个比较难，耗时大……
 
@@ -179,7 +162,7 @@
         at android.view.WindowManagerImpl.addView(WindowManagerImpl.java4)
         at android.widget.Toast$TN.handleShow(Toast.java)
     ```
-- 为什么 Android 8.0 的系统不会有这个问题？在查看 Android 8.0 的源码后我们发现有以下修改：
+- 为什么 `Android 8.0` 的系统不会有这个问题？在查看 `Android` 8.0 的源码后我们发现有以下修改：
     ``` java
     try {
       mWM.addView(mView, mParams);
@@ -188,20 +171,19 @@
       /* ignore */
     }
     ```
-    - 考虑再三，我们决定参考 Android 8.0 的做法，直接 catch 住这个异常。这里的关键在于寻找 Hook 点，这个案例算是相对比较简单的。Toast 里面有一个变量叫 mTN，它的类型为 handler，我们只需要代理它就可以实现捕获。
+    - 考虑再三，决定参考 Android 8.0 的做法，直接 catch 住这个异常。这里的关键在于寻找 Hook 点，这个案例算是相对比较简单的。Toast 里面有一个变量叫 mTN，它的类型为 handler，我们只需要代理它就可以实现捕获。
 - 分析流程
-    - Hook 解决，这个比较难。以最近解决的一个系统崩溃为例，我们发现线上出现一个 Toast 相关的系统崩溃，它只出现在 Android 7.0 的系统中，看起来是在 Toast 显示的时候窗口的 token 已经无效了。这有可能出现在 Toast 需要显示时，窗口已经销毁了。
+    - Hook 解决，这个比较难。以最近解决的一个系统崩溃为例，发现线上出现一个 Toast 相关的系统崩溃，它只出现在 Android 7.0 的系统中，看起来是在 Toast 显示的时候窗口的 token 已经无效了。这有可能出现在 Toast 需要显示时，窗口已经销毁了。
 - 什么是hook
     - hook，钩子. 安卓中的hook技术，其实是一个抽象概念：对系统源码的代码逻辑进行"劫持"，插入自己的逻辑，然后放行。注意：hook可能频繁使用java反射机制···
 
 
 
 #### 3.3 排查so库异常
-- 
 
 
 #### 3.4 反编译ROM解决
-- 我们举一个定制系统ROM导致Crash的例子，根据Crash平台统计数据发现该Crash只发生在vivo V3Max这类机型上，Crash堆栈如下：
+- 举一个定制系统ROM导致Crash的例子，根据`Crash`平台统计数据发现该Crash只发生在vivo V3Max这类机型上，Crash堆栈如下：
     ```
     java.lang.RuntimeException: An error occured while executing doInBackground()
       at android.os.AsyncTask$3.done(AsyncTask.java:304)
@@ -219,8 +201,8 @@
       at java.util.concurrent.FutureTask.run(FutureTask.java:237)
       ... 4 more
     ```
-- 我们发现原生系统上对应系统版本的AbsListView里并没有UpdateBottomFlagTask类，因此可以断定是vivo该版本定制的ROM修改了系统的实现。我们在定位这个Crash的可疑点无果后决定通过Hook的方式解决，通过源码发现AsyncTask$SerialExecutor是静态变量，是一个很好的Hook的点，通过反射添加try-catch解决。
-    - 因为修改的是final对象所以需要先反射修改accessFlags，需要注意ART和Dalvik下对应的Class不同，代码如下：
+- 发现原生系统上对应系统版本的`AbsListView`里并没有`UpdateBottomFlagTask`类，因此可以断定是vivo该版本定制的ROM修改了系统的实现。我们在定位这个Crash的可疑点无果后决定通过Hook的方式解决，通过源码发现`AsyncTask$SerialExecutor`是静态变量，是一个很好的Hook的点，通过反射添加try-catch解决。
+    - 因为修改的是`final`对象所以需要先反射修改`accessFlags`，需要注意ART和Dalvik下对应的`Class`不同，代码如下：
     ```
     public static void setFinalStatic(Field field, Object newValue) throws Exception {
         field.setAccessible(true);
@@ -234,7 +216,7 @@
     }
     
     private void initVivoV3MaxCrashHander() {
-        if (!isVivoV3()) {
+        if (!isVivoV3() && version==xxx) {
             return;
         }
         try {
@@ -247,63 +229,60 @@
         }
     }
     ```
-- App用上述方法解决了对应的Crash，但是有时候因为平台的限制无法通过这种方式，于是我们尝试反编译ROM。 Android ROM编译时会将framework、app、bin等目录打入system.img中，system.img是Android系统中用来存放系统文件的镜像 (image)，文件格式一般为yaffs2或ext。但Android 5.0开始支持dm-verity后，system.img不再提供，而是提供了三个文件system.new.dat，system.patch.dat，system.transfer.list，因此我们首先需要通过上述的三个文件得到system.img。但我们将vivo ROM解压后发现厂商将system.new.dat进行了分片。
+- `App`用上述方法解决了对应的Crash，但是有时候因为平台的限制无法通过这种方式，于是我们尝试反编译ROM。 Android ROM编译时会将framework、app、bin等目录打入system.img中，system.img是Android系统中用来存放系统文件的镜像 (image)，文件格式一般为yaffs2或ext。但Android 5.0开始支持dm-verity后，system.img不再提供，而是提供了三个文件system.new.dat，system.patch.dat，system.transfer.list，因此我们首先需要通过上述的三个文件得到system.img。但我们将vivo ROM解压后发现厂商将system.new.dat进行了分片。
 - 经过对system.transfer.list中的信息和system.new.dat 1 2 3 … 文件大小对比研究，发现一些共同点，system.transfer.list中的每一个block数*4KB 与对应的分片文件的大小大致相同,故大胆猜测，vivo ROM对system.patch.dat分片也只是单纯的按block先后顺序进行了分片处理。所以我们只需要在转化img前将这些分片文件合成一个system.patch.dat文件就可以了。最后根据system.img的文件系统格式进行解包，拿到framework目录，其中有framework.jar和boot.oat等文件，因为Android4.4之后引入了ART虚拟机，会预先把system/framework中的一些jar包转换为oat格式，所以我们还需要将对应的oat文件通过ota2dex将其解包获得dex文件，之后通过dex2jar和jd-gui查看源码。
 
 
 
 ### 04.OOM导致Crash
-- OOM是OutOfMemoryError的简称，在常见的Crash疑难排行榜上，OOM绝对可以名列前茅并且经久不衰。
-    - 因为它发生时的Crash堆栈信息往往不是导致问题的根本原因，而只是压死骆驼的最后一根稻草。
-- 导致OOM的原因大部分如下：
-    - 内存泄漏，大量无用对象没有被及时回收导致后续申请内存失败。
-    - 大内存对象过多，最常见的大对象就是Bitmap，几个大图同时加载很容易触发OOM。
+- `OOM`是`OutOfMemoryError`的简称，在常见的`Crash`疑难排行榜上，`OOM`绝对可以名列前茅并且经久不衰。
+    - 因为它发生时的`Crash`堆栈信息往往不是导致问题的根本原因，而只是压死骆驼的最后一根稻草。
+- 导致`OOM`的原因大部分如下：
+    - 第一是内存泄漏，大量无用对象没有被及时回收导致后续申请内存失败；第二是大内存对象过多，最常见的大对象就是`Bitmap`，几个大图同时加载很容易触发OOM。
 
 
 
 #### 4.1 内存泄漏问题
 - 内存泄漏指系统未能及时释放已经不再使用的内存对象，一般是由错误的程序代码逻辑引起的。
-    - 在Android平台上，最常见也是最严重的内存泄漏就是Activity对象泄漏。Activity承载了App的整个界面功能，Activity的泄漏同时也意味着它持有的大量资源对象都无法被回收，极其容易造成OOM。
-- 常见的可能会造成Activity泄漏的原因有：
-    - 匿名内部类实现Handler处理消息，可能导致隐式持有的Activity对象无法回收。
-    - Activity和Context对象被混淆和滥用，在许多只需要Application Context而不需要使用Activity对象的地方使用了Activity对象，比如注册各类Receiver、计算屏幕密度等等。
-    - View对象处理不当，使用Activity的LayoutInflater创建的View自身持有的Context对象其实就是Activity，这点经常被忽略，在自己实现View重用等场景下也会导致Activity泄漏。
-- 对于Activity泄漏，目前已经有了一个非常好用的检测工具：LeakCanary，它可以自动检测到所有Activity的泄漏情况，并且在发生泄漏时给出十分友好的界面提示，同时为了防止开发人员的疏漏，我们也会将其上报到服务器，统一检查解决。另外我们可以在debug下使用StrictMode来检查Activity的泄露、Closeable对象没有被关闭等问题。
+    - 在Android平台上，最常见也是最严重的内存泄漏就是`Activity`对象泄漏。`Activity`承载了App的整个界面功能，`Activity`的泄漏同时也意味着它持有的大量资源对象都无法被回收，极其容易造成OOM。
+- 常见的可能会造成`Activity`泄漏的原因有：
+    - 匿名内部类实现`Handler`处理消息，可能导致隐式持有的`Activity`对象无法回收。
+    - `Activity`和`Context`对象被混淆和滥用，在许多只需要Application Context而不需要使用Activity对象的地方使用了Activity对象，比如注册各类Receiver、计算屏幕密度等等。
+    - `View`对象处理不当，使用`Activity`的`LayoutInflater`创建的View自身持有的Context对象其实就是Activity，这点经常被忽略，在自己实现View重用等场景下也会导致Activity泄漏。
+- 对于Activity泄漏，目前已经有了一个非常好用的检测工具：LeakCanary，它可以自动检测到所有Activity的泄漏情况，并且在发生泄漏时给出十分友好的界面提示，同时为了防止开发人员的疏漏，我们也会将其上报到服务器，统一检查解决。
 
 
 #### 4.2 大对象
 - 在Android平台上，我们分析任一应用的内存信息，几乎都可以得出同样的结论：
-    - 占用内存最多的对象大都是Bitmap对象。随着手机屏幕尺寸越来越大，屏幕分辨率也越来越高，1080p和更高的2k屏已经占了大半份额，为了达到更好的视觉效果，我们往往需要使用大量高清图片，同时也为OOM埋下了祸根。
+    - 占用内存最多的对象大都是`Bitmap`对象。随着手机屏幕尺寸越来越大，屏幕分辨率也越来越高，1080p和更高的2k屏已经占了大半份额，为了达到更好的视觉效果，往往需要使用大量高清图片，同时也为OOM埋下了祸根。
 - 对于图片内存优化，我们有几个常用的思路：
     - 尽量使用成熟的图片库，比如Glide，图片库会提供很多通用方面的保障，减少不必要的人为失误。
-    - 根据实际需要，也就是View尺寸来加载图片，可以在分辨率较低的机型上尽可能少地占用内存。除了常用的BitmapFactory.Options#inSampleSize和Glide提供的BitmapRequestBuilder#override之外，我们的图片CDN服务器也支持图片的实时缩放，可以在服务端进行图片缩放处理，从而减轻客户端的内存压力。 
+    - 根据实际需要，也就是View尺寸来加载图片，可以在分辨率较低的机型上尽可能少地占用内存。除了常用的`BitmapFactory.Options#inSampleSize`和Glide提供的`BitmapRequestBuilder#override`之外，图片CDN服务器也支持图片的实时缩放，可以在服务端进行图片缩放处理，从而减轻客户端的内存压力。 
     - 分析App内存的详细情况是解决问题的第一步，我们需要对App运行时到底占用了多少内存、哪些类型的对象有多少个有大致了解，并根据实际情况做出预测，这样才能在分析时做到有的放矢。
     - Android Studio也提供了非常好用的Memory Profiler，堆转储和分配跟踪器功能可以帮我们迅速定位问题。
 
 
 
 ### 05.三方库导致Crash
-- Android App经常会依赖很多AAR，每个AAR可能有多个版本，打包时Gradle会根据规则确定使用的最终版本号（默认选择最高版本或者强制指定的版本），而其他版本的AAR将被丢弃。如果互相依赖的AAR中有不兼容的版本，存在的问题在打包时是不能发现的，只有在相关代码执行时才会出现，会造成NoClassDefFoundError、NoSuchFieldError、NoSuchMethodError等异常。如图所示，order和store两个业务库都依赖了platform.aar，一个是1.0版本，一个是2.0版本，默认最终打进APK的只有platform 2.0版本，这时如果order库里用到的platform库里的某个类或者方法在2.0版本中被删除了，运行时就可能发生异常，虽然SDK在升级时会尽量做到向下兼容，但很多时候尤其是第三方SDK是没法得到保证的，在美团外卖Android App v6.0版本时因为这个原因导致热修复功能丧失，因此为了提前发现问题，我们接入了依赖检查插件Defensor。
+- `App`经常会依赖很多AAR，每个AAR可能有多个版本，打包时Gradle会根据规则确定使用的最终版本号（默认选择最高版本或者强制指定的版本），而其他版本的AAR将被丢弃。如果互相依赖的AAR中有不兼容的版本，存在的问题在打包时是不能发现的，只有在相关代码执行时才会出现，会造成`NoClassDefFoundError`、`NoSuchFieldError`、`NoSuchMethodError`等异常。
 - Defensor在编译时通过DexTask获取到所有的输入文件(也就是被编译过的class文件)，然后检查每个文件里引用的类、字段、方法等是否存在。
-- 除此之外我们写了一个Gradle插件SVD(strict version dependencies)来对那些重要的SDK的版本进行统一管理。插件会在编译时检查Gradle最终使用的SDK版本是否和配置中的一致，如果不一致插件会终止编译并报错，并同时会打印出发生冲突的SDK的所有依赖关系。
 
 
 
 ### 06.AOP增强辅助
 #### 6.1 AOP是什么
 - AOP是面向切面编程的简称
-    - 在Android的Gradle插件1.5.0中新增了Transform API之后，编译时修改字节码来实现AOP也因为有了官方支持而变得非常方便。
+    - 在Android的Gradle插件1.5.0中新增了`Transform` API之后，编译时修改字节码来实现AOP也因为有了官方支持而变得非常方便。
 - 在一些特定情况下，可以通过AOP的方式自动处理未捕获的异常：
-    - 抛异常的方法非常明确，调用方式比较固定。
-    - 异常处理方式比较统一。
-    - 和业务逻辑无关，即自动处理异常后不会影响正常的业务逻辑。典型的例子有读取Intent Extras参数、读取SharedPreferences、解析颜色字符串值和显示隐藏Window等等。
+    - 抛异常的方法非常明确，调用方式比较固定；异常处理方式比较统一。
+    - 和业务逻辑无关，即自动处理异常后不会影响正常的业务逻辑。典型的例子有读取`Intent Extras`参数、读取`SharedPreferences`、解析颜色字符串值和显示隐藏`Window`等等。
 
 
 #### 6.2 处理Intent异常
 - 这类问题的解决原理大致相同
-    - 我们以Intent Extras为例详细介绍一下。读取Intent Extras的问题在于我们非常常用的方法 Intent#getStringExtra 在代码逻辑出错或者恶意攻击的情况下可能会抛出ClassNotFoundException异常，而我们平时在写代码时又不太可能给所有调用都加上try-catch语句，于是一个更安全的Intent工具类应运而生，理论上只要所有人都使用这个工具类来访问Intent Extras参数就可以防止此类型的Crash。
+    - 以Intent Extras为例详细介绍一下。读取Intent Extras的问题在于我们非常常用的方法 Intent#getStringExtra 在代码逻辑出错或者恶意攻击的情况下可能会抛出ClassNotFoundException异常，而我们平时在写代码时又不太可能给所有调用都加上try-catch语句，于是一个更安全的Intent工具类应运而生，理论上只要所有人都使用这个工具类来访问Intent Extras参数就可以防止此类型的Crash。
     - 但是面对庞大的旧代码仓库和诸多的业务部门，修改现有代码需要极大成本，还有更多的外部依赖SDK基本不可能使用我们自己的工具类，此时就需要AOP大展身手了。
-- 我们专门制作了一个Gradle插件，只需要配置一下参数就可以将某个特定方法的调用替换成另一个方法：
+- 我们专门制作了一个`Gradle`插件，只需要配置一下参数就可以将某个特定方法的调用替换成另一个方法：
     ```
     WaimaiBytecodeManipulator {
          replacements(
@@ -320,45 +299,40 @@
 
 
 
-
-
 ### 07.Crash的预防实践
-- 单纯的靠约定或规范去减少Crash的发生是不现实的。
+- 单纯的靠约定或规范去减少`Crash`的发生是不现实的。
     - 约定和规范受限于组织架构和具体执行的个人，很容易被忽略，只有靠工程架构和工具才能保证Crash的预防长久的执行下去。
 
 
 #### 7.1 工程架构对Crash率的影响
-- 在治理Crash的实践中，我们往往忽略了工程架构对Crash率的影响。
+- 在治理Crash的实践中，往往忽略了工程架构对Crash率的影响。
     - Crash的发生大部分原因是源于程序员的不合理的代码，而程序员工作中最直接的接触的就是工程架构。
-    - 对于一个边界模糊，层级混乱的架构，程序员是更加容易写出引起Crash的代码。在这样的架构里面，即使程序员意识到导致某种写法存在问题，想要去改善这样不合理的代码，也是非常困难的。
-    - 相反，一个层级清晰，边界明确的架构，是能够大大减少Crash发生的概率，治理和预防Crash也是相对更容易。
+    - 对于一个层级混乱的架构，是更加容易写出引起Crash的代码。在这样的架构里面，即使程序员意识到导致某种写法存在问题，想要去改善这样不合理的代码，也是非常困难的。相反，一个层级清晰，边界明确的架构，是能够大大减少Crash发生的概率，治理和预防Crash也是相对更容易。
 - 业务模块的划分
-    - 原来我们的Crash基本上都是由个别同学关注解决的，团队里的每个同学都会提交可能引起Crash的代码，如果负责Crash的同学因为某些事情，暂时没有关注App的Crash率，那么造成Crash的同学也不会知道他的代码引起了Crash。
+    - 原来Crash基本上都是由个别同学关注解决的，团队里的每个同学都会提交可能引起Crash的代码，如果负责Crash的同学因为某些事情，暂时没有关注App的Crash率，那么造成Crash的同学也不会知道他的代码引起了Crash。
     - 对于这个问题，我们的做法是App的业务模块化。业务模块化后，每个业务都有都有唯一包名和对应的负责人。当某个模块发生了Crash，可以根据包名提交问题给这个模块的负责人，让他第一时间进行处理。业务模块化本身也是工程架构优先需要考虑的事情之一。
 - 页面跳转路由统一处理页面跳转
-    - 对外卖App而言，使用过程中最多的就是页面间的跳转，而页面间跳转经常会造成ActivityNotFoundException，例如我们配了一个scheme，但对方的scheme路径已经发生了变化；又例如，我们调用手机上相册的功能，而相册应用已被用户自己禁用或移除了。解决这一类Crash，其实也很简单，只需要在startActivity增加ActivityNotFoundException异常捕获即可。但一个App里，启动Activity的地方，几乎是随处可见，无法预测哪一处会造成ActivityNotFoundException。
-    - 我们的做法是将页面的跳转，都通过我们封装的scheme路由去分发。这样的好处是，通过scheme路由，在工程架构上所有业务都是解耦，模块间不需要相互依赖就可以实现页面的跳转和基本类型参数的传递；同时，由于所有的页面跳转都会走scheme路由，我们只需要在scheme路由里一处加上ActivityNotFoundException异常捕获即可解决这种类型的Crash。路由设计示意图如下：
-- 网络层统一处理API脏数据
-    - 客户端的很大一部分的Crash是因为API返回的脏数据。比如当API返回空值、空数组或返回不是约定类型的数据，App收到这些数据，就极有可能发生空指针、数组越界和类型转换错误等Crash。而且这样的脏数据，特别容易引起线上大面积的崩溃。
-    - 最早我们的工程的网络层用法是：页面监听网络成功和失败的回调，网络成功后，将JSON数据传递给页面，页面解析Model，初始化View，如图所示。这样的问题就是，网络虽然请求成功了，但是JSON解析Model这个过程可能存在问题，例如没有返回数据或者返回了类型不对的数据，而这个脏数据导致问题会出现在UI层，直接反应给用户。
-    - 根据上图，我们可以看到由于网络层只承担了请求网络的职责，没有承担数据解析的职责，数据解析的职责交给了页面去处理。这样使得我们一旦发现脏数据导致的Crash，就只能在网络请求的回调里面增加各种判断去兼容脏数据。我们有几百个页面，补漏完全补不过来。通过几个版本的重构，我们重新划分了网络层的职责，如图所示：
-    - 从图上可以看出，重构后的网络层负责请求网络和数据解析，如果存在脏数据的话，在网络层就会发现问题，不会影响到UI层，返回给UI层的都是校验成功的数据。这样改造后，我们发现这类的Crash率有了极大的改善。
+    - 将页面的跳转，都通过我们封装的`scheme`路由去分发。这样的好处是，通过scheme路由，在工程架构上所有业务都是解耦，模块间不需要相互依赖就可以实现页面的跳转和基本类型参数的传递；同时，由于所有的页面跳转都会走scheme路由，我们只需要在scheme路由里一处加上ActivityNotFoundException异常捕获即可解决这种类型的Crash。路由设计示意图如下：
+- 网络层统一处理`API`脏数据
+    - 客户端的很大一部分的`Crash`是因为`API`返回的脏数据。比如当API返回空值、空数组或返回不是约定类型的数据，App收到这些数据，就极有可能发生空指针、数组越界和类型转换错误等Crash。而且这样的脏数据，特别容易引起线上大面积的崩溃。
+    - 网络层只承担了请求网络的职责，没有承担数据解析的职责，数据解析的职责交给了页面去处理。这样使得我们一旦发现脏数据导致的Crash，就只能在网络请求的回调里面增加各种判断去兼容脏数据。
+    - 如果存在脏数据的话，在网络层就会发现问题，不会影响到UI层，返回给UI层的都是校验成功的数据。这样改造后，发现这类的Crash率有了极大的改善。
 
 
 #### 7.2 大图监控
-- 上面讲到大对象是导致OOM的主要原因之一，而Bitmap是App里最常见的大对象类型，因此对占用内存过大的Bitmap对象的监控就很有必要了。
-- 我们用AOP方式Hook了三种常见图片库的加载图片回调方法，同时监控图片库加载图片时的两个维度：
-    - 加载图片使用的URL。外卖App中除静态资源外，所有图片都要求发布到专用的图片CDN服务器上，加载图片时使用正则表达式匹配URL，除了限定CDN域名之外还要求所有图片加载时都要添加对应的动态缩放参数。
-    - 最终加载出的图片结果（也就是Bitmap对象）。我们知道Bitmap对象所占内存和其分辨率大小成正比，而一般情况下在ImageView上设置超过自身尺寸的图片是没有意义的，所以我们要求显示在ImageView中的Bitmap分辨率不允许超过View自身的尺寸（为了降低误报率也可以设定一个报警阈值）。
-- 开发过程中，在App里检测到不合规的图片时会立即高亮出错的ImageView所在的位置并弹出对话框提示ImageView所在的Activity、XPath和加载图片使用的URL等信息，辅助开发同学定位并解决问题。在Release环境下可以将报警信息上报到服务器，实时观察数据，有问题及时处理。
+- 大对象是导致`OOM`的主要原因之一，而`Bitmap`是App里最常见的大对象类型，因此对占用内存过大的Bitmap对象的监控就很有必要了。
+- 用AOP方式Hook了三种常见图片库的加载图片回调方法，同时监控图片库加载图片时的两个维度：
+    - 加载图片使用的URL。App中除静态资源外，所有图片都要求发布到专用的图片CDN服务器上，加载图片时使用正则表达式匹配URL，除了限定CDN域名之外还要求所有图片加载时都要添加对应的动态缩放参数。
+    - 最终加载出的图片结果（也就是Bitmap对象）。我们知道`Bitmap`对象所占内存和其分辨率大小成正比，而一般情况下在`ImageView`上设置超过自身尺寸的图片是没有意义的，所以要求显示在`ImageView`中的Bitmap分辨率不允许超过View自身的尺寸（为了降低误报率也可以设定一个报警阈值）。
+- 开发过程中，在App里检测到不合规的图片时会立即高亮出错的`ImageView`所在的位置并弹出对话框提示`ImageView`所在的`Activity`加载图片使用的URL等信息，辅助开发同学定位并解决问题。在Release环境下可以将报警信息上报到服务器，实时观察数据，有问题及时处理。
 
 
 #### 7.3 Lint检查
-- 发现线上的很多Crash其实可以在开发过程中通过Lint检查来避免。
+- 发现线上的很多`Crash`其实可以在开发过程中通过`Lint`检查来避免。
     - Lint是Google提供的Android静态代码检查工具，可以扫描并发现代码中潜在的问题，提醒开发人员及早修正，提高代码质量。
 - 但是Android原生提供的Lint规则（如是否使用了高版本API）远远不够，缺少一些我们认为有必要的检测，也不能检查代码规范。
     - 因此我们开始开发自定义Lint，目前我们通过自定义Lint规则已经实现了Crash预防、Bug预防、提升性能/安全和代码规范检查这些功能。
-    - 如检查实现了Serializable接口的类，其成员变量（包括从父类继承的）所声明的类型都要实现Serializable接口，可以有效的避免NotSerializableException；强制使用封装好的工具类如ColorUtil、WindowUtil等可以有效的避免因为参数不正确产生的IllegalArgumentException和因为Activity已经finish导致的BadTokenException。
+    - 如检查实现了`Serializable`接口的类，其成员变量（包括从父类继承的）所声明的类型都要实现Serializable接口，可以有效的避免`NotSerializableException`；强制使用封装好的工具类如ColorUtil、WindowUtil等可以有效的避免因为参数不正确产生的IllegalArgumentException和因为`Activity`已经`finish`导致的`BadTokenException`。
 - Lint检查可以在多个阶段执行，包括在本地手动检查、编码实时检查、编译时检查、commit时检查，以及在CI系统中提Pull Request时检查、打包时检查等。
 
 
@@ -366,128 +340,18 @@
 
 ### 08.Looper拦截崩溃
 #### 8.1 能否用Looper拦截崩溃
-- 问题思考一下
-    - 能否基于 Handler 和 Looper 拦截全局崩溃（主线程），避免 APP 退出。能否基于 Handler 和 Looper 实现 ANR 监控。
-- 测试代码如下所示
-    ``` java
-    public class App extends Application {
-        @Override
-        public void onCreate() {
-            super.onCreate();
-            CrashTestDemo.test();
-        }
-    }
-
-    //测试代码
-    public class CrashTestDemo {
-        private static long startWorkTimeMillis = 0L;
-        public static void test(){
-            Looper.getMainLooper().setMessageLogging(new Printer() {
-                @Override
-                public void println(String it) {
-                    if (it.startsWith(">>>>> Dispatching to Handler")) {
-                        startWorkTimeMillis = System.currentTimeMillis();
-                    } else if (it.startsWith("<<<<< Finished to Handler")) {
-                        long duration = System.currentTimeMillis() - startWorkTimeMillis;
-                        if (duration > 100) {
-                            Log.e("Application---主线程执行耗时过长","$duration 毫秒，$it");
-                        }
-                    }
-                }
-            });
-            Handler handler = new Handler(Looper.getMainLooper());
-            handler.post(new Runnable() {
-                @Override
-                public void run() {
-                    while (true){
-                        try {
-                            Looper.loop();
-                        } catch (Throwable e){
-                            if (e.getMessage()!=null && e.getMessage().startsWith("Unable to start activity")){
-                                android.os.Process.killProcess(android.os.Process.myPid());
-                                break;
-                            }
-                            e.printStackTrace();
-                            Log.e("Application---Looper---",e.getMessage());
-                        }
-                    }
-                }
-            });
-            Thread.setDefaultUncaughtExceptionHandler(new Thread.UncaughtExceptionHandler() {
-                @Override
-                public void uncaughtException(Thread t, Throwable e) {
-                    e.printStackTrace();
-                    Log.e("Application-----","uncaughtException---异步线程崩溃，自行上报崩溃信息");
-                }
-            });
-        }
-    }
-    ```
-- 通过上面的代码就可以就可以实现拦截UI线程的崩溃，耗时性能监控。但是也并不能够拦截所有的异常，如果在Activity的onCreate出现崩溃，导致Activity创建失败，那么就会显示黑屏。
-
-
-
-#### 8.2 思考几个问题分析
-- 通过上面简单的代码，我们就实现崩溃和ANR的拦截和监控
-    - 但是我们可能并不知道是为何实现的，包括我们知道出现了ANR，但是我们还需要进一步分析为何处出现ANR，如何解决。
+- 问题思考一下。
+    - 能否基于`Handler`和`Looper`拦截全局崩溃（主线程），避免 APP 退出。能否基于 Handler 和 Looper 实现 ANR 监控。
 - 今天分析的问题有：
     - 如何拦截全局崩溃，避免APP退出。如何实现 ANR 监控。拦截到了之后可以做什么处理，如何优化？
 
 
 
-#### 8.3 App启动时自动开启Looper
+#### 8.2 使用Loop拦截崩溃
 - 先从APP启动开始分析，APP的启动方法是在ActivityThread中，在main方法中创建了主线程的Looper，也就是当前进程创建。
     - 在main方法的最后调用了 Looper.loop()，在这个方法中处理主线程的任务调度，一旦执行完这个方法就意味着APP被退出了。
     - 如果我们要避免APP被退出，就必须让APP持续执行Looper.loop()。注意这句话非常重要！！！
-    ``` java
-    public final class ActivityThread extends ClientTransactionHandler {
-        public static void main(String[] args) {
-            Looper.prepareMainLooper();
-            //省略代码
-            Looper.loop();
-            throw new RuntimeException("Main thread loop unexpectedly exited");
-        }
-    }
-    ```
-- 那进一步分析Looper.loop()方法
-    - 在这个方法中写了一个循环，只有当 queue.next() == null 的时候才退出，看到这里我们心里可能会有一个疑问，如果没有主线程任务，是不是Looper.loop()方法就退出了呢？
-    - 实际上queue.next()其实就是一个阻塞的方法，如果没有任务或没有主动退出，会一直在阻塞，一直等待主线程任务添加进来。
-    - 当队列有任务，就会打印信息 Dispatching to ...，然后就调用 msg.target.dispatchMessage(msg);执行任务，执行完毕就会打印信息 Finished to ...，我们就可以通过打印的信息来分析 ANR，一旦执行任务超过5秒就会触发系统提示ANR，但是我们对自己的APP肯定要更加严格，我们可以给我们设定一个目标，超过指定的时长就上报统计，帮助我们进行优化。
-    ``` java
-    public final class Looper {
-        final MessageQueue mQueue;
-        public static void loop() {
-            final Looper me = myLooper();
-            if (me == null) {
-                throw new RuntimeException("No Looper; Looper.prepare() wasn't called on this thread.");
-            }
-            final MessageQueue queue = me.mQueue;
-            for (;;) {
-                Message msg = queue.next(); // might block
-                if (msg == null) {
-                    // No message indicates that the message queue is quitting.
-                    return;
-                }
-                // This must be in a local variable, in case a UI event sets the logger
-                final Printer logging = me.mLogging;
-                if (logging != null) {
-                    logging.println(">>>>> Dispatching to " + msg.target + " " + msg.callback + ": " + msg.what);
-                }
-                try {
-                    msg.target.dispatchMessage(msg);
-                } finally {}
-                if (logging != null) {
-                    logging.println("<<<<< Finished to " + msg.target + " " + msg.callback);
-                }
-                msg.recycleUnchecked();
-            }
-        }
-        public void quit() {
-            mQueue.quit(false);
-        }
-    }
-    ```
-- 得出结论
+- 查看相关源码得出结论
     - Looper 是用来循环遍历消息队列的，一旦消息队列中存在消息，那么就会执行里面的操作。整个 Android 系统就是基于事件驱动的，而事件主要就是基于 Looper 来获取的。
     - 如果这里一旦出现 crash，那么就直接会跳出整个 main 方法，自然 loop 循环也就跳出了，那么自然而然事件也就接收不到，更没法处理，所以整个 App 就会卡死在这里。
 - 如何让app崩溃后不会退出
@@ -630,7 +494,6 @@
 
 
 
-# https://tech.meituan.com/2018/04/13/waimai-android-lint.html
 
 
 
