--- a/Read/ReadMeWiki/00.方案实践/05.ANR监控治理实践.md
+++ b/Read/ReadMeWiki/00.方案实践/05.ANR监控治理实践.md
@@ -1,6 +1,6 @@
 #### 目录介绍
-- 01.整体概述
-    - 1.1 项目背景
+- 01.ANR整体概述
+    - 1.1 项目背景介绍
     - 1.2 遇到问题
     - 1.3 基础概念介绍
     - 1.4 设计目标
@@ -8,7 +8,7 @@
 - 02.ANR基础分析
     - 2.1 究竟什么是ANR
     - 2.2 造成ANR的原因分类
-    - 2.3 ANR产生需要的条件
+    - 2.3 ANR产生条件
     - 2.4 ANR触发场景
     - 2.5 四大组件ANR
     - 2.6 触发ANR的步骤
@@ -20,16 +20,16 @@
     - 3.5 那些极端情况不会ANR
     - 3.6 理解ANR静默和弹窗
     - 3.7 处理ANR信息收集操作
-- 04.ANR监控设计思路
-    - 4.1 ANR监控整体思路
-    - 4.2 目前流行方案
-    - 4.3 
-- 05.方案基础设计
-    - 5.1 整体架构图
-    - 5.2 UML设计图
-    - 5.3 关键流程图
-    - 5.4 接口设计图
-    - 5.5 模块间依赖关系
+- 04.ANR排查解决实践
+- 05.ANR监控设计思路
+    - 5.1 ANR监控整体思路
+    - 5.2 目前流行方案
+    - 5.3 
+    - 5.5 整体架构图
+    - 5.6 UML设计图
+    - 5.7 关键流程图
+    - 5.8 接口设计图
+    - 5.9 模块间依赖关系
 - 06.其他设计说明
     - 6.1 性能设计
     - 6.2 稳定性设计
@@ -41,11 +41,19 @@
 
 
 
-### 01.整体概述
-#### 1.1 项目背景
+### 01.ANR整体概述
+#### 1.1 项目背景介绍
+
+
 #### 1.2 遇到问题
+
+
 #### 1.3 基础概念介绍
+
+
 #### 1.4 设计目标
+
+
 #### 1.5 产生收益分析
 
 
@@ -66,7 +74,7 @@
 
 
 
-#### 2.3 ANR产生需要的条件
+#### 2.3 ANR产生条件
 - ANR的产生需要满足三个条件
     - 主线程：只有应用程序进程的主线程响应超时才会产生ANR；
     - 超时时间：产生ANR的上下文不同，超时时间也会不同，但只要在这个时间上限内没有响应就会ANR；
@@ -86,16 +94,12 @@
 #### 2.5 四大组件ANR
 - service 前台20s后台200s未完成启动： Timeout executing service
     - Service Timeout是位于”ActivityManager”线程中的AMS.MainHandler收到SERVICE_TIMEOUT_MSG消息时触发。
-    - 对于Service有两类:
-        - 对于前台服务，则超时为SERVICE_TIMEOUT = 20s；
-        - 对于后台服务，则超时为SERVICE_BACKGROUND_TIMEOUT = 200s
+    - 对于Service有两类: 对于前台服务，则超时为SERVICE_TIMEOUT = 20s；对于后台服务，则超时为SERVICE_BACKGROUND_TIMEOUT = 200s
 - BroadcastReceiver的事件(onReceive方法)在规定时间内没处理完：Timeout of broadcast BroadcastRecord
-    - 对于前台广播，则超时为BROADCAST_FG_TIMEOUT = 10s；
-    - 对于后台广播，则超时为BROADCAST_BG_TIMEOUT = 60s
+    - 对于前台广播，则超时为BROADCAST_FG_TIMEOUT = 10s；对于后台广播，则超时为BROADCAST_BG_TIMEOUT = 60s
     - 以BroadcastReviver为例，在onReceive()方法执行10秒内没发生第一种ANR(也就是在这个过程中没有输入事件或输入事件还没到5s)才会发生Receiver timeout，否则将先发生事件无相应ANR，所以onReceive()是有可能执行不到10s就发生ANR的，所以不要在onReceive()方法里面干活
 - ContentProvider的publish在10s内没进行完：timeout publishing content providers
-- Activity 界面如果5秒未响应：Activity not responding
-    - 这种是特别常见的场景
+- Activity 界面如果5秒未响应：Activity not responding。这种是特别常见的场景
 
 
 ### 03.ANR流程分析
