--- a/Read/ReadMeWiki/00.方案实践/06.卡顿监控设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/06.卡顿监控设计实践.md
@@ -35,7 +35,6 @@
 
 
 
-
 ### 01.卡顿整体概述
 #### 1.1 项目背景
 - App中卡顿让用户使用体验不佳
@@ -85,6 +84,7 @@
     - Android虚拟机频繁执行GC操作导致的卡顿。由于GC会占用大量的系统资源，同时GC过程中会产生UI线程停顿，从而产生卡顿。
     - 过度绘制产生卡顿。过度绘制会导致GPU执行时间变长，从而产生丢帧现象。
 - 举一些案例说明
+    - 比如滑动列表
 
 
 #### 2.2 卡顿和ANR的关系
