--- a/Read/ReadShareWiki/08.技术管理/02.技术招聘方法论.md
+++ b/Read/ReadShareWiki/08.技术管理/02.技术招聘方法论.md
@@ -36,13 +36,14 @@
 - 插件化原理，实现插件化需要解决的技术难点：类加载、四大组件生命周期、资源隔离、构建环境
 - 面试者主导的项目重构或者一个完整的性能优化经历（发现问题&解决方案、如何分步执行、推动上线、实现解决问题的闭环）
 - 性能优化：主要看面试者是否真有实际解决经验、常用工具、总结的经验和方法论。
-- 跨平台方案的理解，RN、Weex、Flutter，加分项
+- 跨平台方案的理解: RN、Weex、Flutter，加分项
 
 
 ### 05.软素质考察
-- **主要对沟通能力、性格、学习能力、项目管理能力等方面衡量**。
-- 沟通时比较沉闷、表达思路不清晰、所答非所问、微表情（不专业），沟通是否紧张。
-- 沟通强势、对自己的主张很坚持（不一定是坏）。项目里人员数目、面对风险如何解决、项目冲突如何解？关键节点
+- **主要对沟通能力、性格、学习能力、项目管理能力等方面衡量**。你拿什么来证明自己优秀？
+- 沟通时比较沉闷、表达思路不清晰、所答非所问、微表情（不专业），沟通是否紧张。沟通强势、对自己的主张很坚持（不一定是坏）。项目里人员数目、面对风险如何解决、项目冲突如何解？关键节点
+- 面对一个难题时知道怎么去简化和抽象问题，把问题拨出来分类或者分层讨论，还会试图把问题分解成不同的子问题逐个来讨论。多进行一些思维训练，学会如何系统地区分解和分析一个问题。
+- 为了提升技术，做了什么，多久，付出哪些。GitHub，博客，项目等都可以拿出来讨论，关键要有……对技术的热爱，必须要有具体的事实支撑，否则给人看法折扣
 
 
 
@@ -62,6 +63,7 @@
 - 专业能力的考察：Android 基础，对部分Android 源码有所了解，那么了解多少；python、shell、linux 命令、git、vim、效率工具
 - 学习能力：对新的知识如何学习，所学知识解决了什么问题，中间碰到过哪些坑，看过的书、公众号、博客等。学习方法和过程要考察，也要重点关注学习的结果。
 - 其他一些软能力：协作沟通：表达清晰、准确，复杂问题可以提炼为简单的话术表达清楚；思维方式：金字塔思维，结构化思维；问题解决能力：过往处理过的疑难杂症，思路是否开阔，是否从本质上解决问题；学校成绩：学校、专业排名、竞赛成绩动机：爱好、成就感、薪酬、性格
+
 
 
 
