--- a/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
@@ -1,26 +1,42 @@
 #### 目录介绍
 - 01.启动优化背景
-    - 1.1 启动背景
+    - 1.1 项目背景介绍
     - 1.2 概念说明
     - 1.3 衡量标准
     - 1.4 建设目标
+    - 1.5 产生收益分析
 - 02.启动流程分析
     - 2.1 App启动流程
     - 2.2 什么是冷启动
     - 2.3 什么是热启动
     - 2.4 什么是温启动
     - 2.5 启动流程优化点
-- 03.启动优化着手
+    - 2.6 冷启动时间检测
+- 03.启动优化思路分析
     - 3.1 优化如何着手
     - 3.2 业务梳理优化思路
-- 04.启动代码执行耗时
+- 04.启动优化实践操作
     - 4.1 启动阶段代码梳理
     - 4.2 收集耗时信息
+- 05.方案基础设计
+    - 5.1 整体架构图
+    - 5.2 UML设计图
+    - 5.3 关键流程图
+    - 5.4 接口设计图
+    - 5.5 模块间依赖关系
+- 06.其他设计说明
+    - 6.1 性能设计
+    - 6.2 稳定性设计
+    - 6.3 灰度设计
+    - 6.4 降级设计
+    - 6.5 异常设计
+    - 6.6 兼容性设计
+    - 6.7 自测case设计
 
 
 
 ### 01.启动优化背景
-#### 1.1 启动背景
+#### 1.1 项目背景介绍
 
 
 #### 1.2 概念说明
@@ -31,41 +47,20 @@
 
 #### 1.4 建设目标
 
+
 ### 02.启动流程分析
 #### 2.1 App启动流程
-- 你知道App启动类型有哪些么？
-    - 有冷启动，热启动，温启动。接下来，一起来了解下它们的启动流程和区别……
+- App启动类型有哪些么？有冷启动，热启动，温启动。接下来，一起来了解下它们的启动流程和区别……
 
 
 #### 2.2 什么是冷启动
 - 什么是冷启动
-    - 场景：开机后第一次启动应用 或者 应用被杀死后再次启动生命周期：
+    - 场景：开机后第一次启动应用 或者 应用被杀死后再次启动生命周期。冷启动是最慢最耗时的，系统以及应用本身都有大量的工作需要处理，所以，冷启动对于应用的启动速度是最具挑战以及最有必要进行优化的。
+    - 特点：冷启动因为系统会重新创建一个新的进程分配给它，所以会先创建和初始化application类，再创建和初始化Activity类（包括一系列的测量、布局、绘制），最后显示在界面上。
+- 冷启动大概流程
     - Process.start->Application创建->attachBaseContext->onCreate->onStart->onResume->Activity生命周期启动速度：主要是优化这块的启动过程时间。
-    - 冷启动是最慢最耗时的，系统以及应用本身都有大量的工作需要处理，所以，冷启动对于应用的启动速度是最具挑战以及最有必要进行优化的。
-- 详细一点说
-    - 冷启动：当启动应用时，后台没有该应用的进程，这时系统会重新创建一个新的进程分配给该应用，这个启动方式就是冷启动。
-    - 特点：冷启动因为系统会重新创建一个新的进程分配给它，所以会先创建和初始化application类，再创建和初始化MainActivity类（包括一系列的测量、布局、绘制），最后显示在界面上。
-- 冷启动通常会发生在一下两种情况：
-    - 设备启动以来首次启动应用程序
-    - 系统杀死应用程序之后再次启动应用程序
 - 在冷启动的最开始，系统需要负责做三件事：
-    - 加载以及启动app
-    - app启动之后立刻显示一个空白的预览窗口
-    - 创建app进程
-- 一旦系统完成创建app进程后，app进程将要接着负责完成下面的工作：
-    - 创建Application对象
-    - 创建并且启动主线程ActivityThread
-    - 创建启动第一个Activity
-    - Inflating views
-    - 布局屏幕
-    - 执行第一次绘制
-- 一旦app进程完完成了第一次绘制工作，系统进程就会用main activity替换前面显示的预览窗口，这个时候，用户就可以正式开始与app进行交互了。
-    - 从冷启动的流程看，我们无法干预app进程创建等系统操作，我们能够干预的有：
-        - 预览窗口
-        - Application生命周期回调
-        - Activity生命周期回调
-
-
+    - 1.加载以及启动app；2.app启动之后立刻显示一个空白的预览窗口；3.创建app进程
 
 
 #### 2.3 什么是热启动
@@ -82,7 +77,6 @@
     - 场景：应用已经启动，返回键退出生命周期：onCreate->onStart->onResume->Activity生命周期启动速度：较快
 
 
-
 #### 2.5 启动流程优化点
 - 通过翻阅 Application启动的源码
     - 当我们点击桌面图标进入我们软件应用的时候，会由 AMS 通过 Socket 给 Zygote 发送一个 fork 子进程的消息，当 Zygote fork 子进程完成之后会通过反射启动 ActivityThread##main 函数，最后又由 AMS 通过 aidl 告诉 ActivityThread##H 来反射启动创建Application 实例，并且依次执行 attachBaseContext 、onCreate 生命周期，由此可见我们不能在这 2 个生命周期里做主线程耗时操作。
@@ -97,75 +91,20 @@
         - 4.4 installContentProviders
         - 4.5 Application onCreate
     - 5.ActivityThread 进入loop循环
-    - 6.Activity生命周期回调，onCreate、onStart、onResume...
+    - 6.Activity生命周期回调，onCreate、onStart、onResume...这个主要是第一个页面的页面加载，渲染到展现
 - 整个启动流程我们能干预的主要是4.3、4.5和6，应用启动优化主要从这三个地方入手。
     - 理想状况下，这三个地方如果不做任何耗时操作，那么应用启动速度就是最快的，但是现实很骨感，很多开源库接入第一步一般都是在Application onCreate方法初始化，有的甚至直接内置ContentProvider，直接在ContentProvider中初始化框架，不给你优化的机会。
 
 
-### 03.启动优化着手
-#### 3.1 优化如何着手
-- 提高app的启动速度，加快Application的执行时间也是一个很重要的方面，这里我暂时总结了几条原则：
-    - 尽量不将一些业务逻辑放于Application中；
-    - Application尽量不以静态变量的方式保存应用数据；
-    - 若App的大小不是特别大无需使用dex分包方案；
-    - 在Application中关于文件，数据库等耗时的操作尽量放到IntentService线程中处理
-    - 不要做有关于循环的操作
-- 常见的启动优化方式大概有这些：
-    - MultipDex优化（本文重点）
-    - 第三方库懒加载
-    - WebView优化
-    - 线程优化
-    - 系统调用优化
-- 启动页面屏蔽返回按键
-    - 一般App中都会在启动页面执行一些初始化配置等，所以这时候启动页加载时不希望用户通过按下返回按键退出App，因而可以在启动页中屏蔽返回按键，这里简单的介绍一下具体的实现：
-- 知道了  attachBaseContext 、onCreate  在应用中最先启动，那么我们就可以通过 TreceView 等性能检测工具，来检测具体函数耗时时间，然后来对其做具体的优化。
-    - 1.项目不及时需要的代码通过异步加载。
-    - 2.将对一些使用率不高的初始化，做懒加载。
-    - 3.将对一些耗时任务通过开启一个 IntentService来处理。
-    - 4.还通过 redex 重排列 class 文件，将启动阶段需要用到的文件在 APK 文件中排布在一起，尽可能的利用 Linux 文件系统的 pagecache 机制，用最少的磁盘 IO 次数，读取尽可能多的启动阶段需要的文件，减少 IO 开销，从而达到提升启动性能的目的。
-    - 5.通过抖音发布的文章知晓在 5.0 低版本可以做 MultiDex 优化，在第一次启动的时候，直接加载没有经过 OPT 优化的原始 DEX，先使得 APP 能够正常启动。然后在后台启动一个单独进程，慢慢地做完 DEX 的 OPT 工作，尽可能避免影响到前台 APP 的正常使用。
+#### 2.6 冷启动时间检测
+- 要想提升APP启动时的性能，加快启动速度，首先我们应该正确的获取和分析应用的启动时间和性能。为了正确诊断应用的启动时间和性能，我们可以跟踪一些显示应用启动所需时间的指标。
 
 
-#### 3.2 业务梳理优化思路
-- 不要一股脑把全部初始化工作放在 Application 中做。
-    - 需要梳理清楚当前启动过程正在运行的每一个模块，哪些是一定需要的、哪些可以砍掉、哪些可以懒加载。
-    - 但是需要注意的是，懒加载要防止集中化，否则容易出现首页显示后用户无法操作的情形。
-- 总的来说，用以下四个维度分整理启动的各个点：
-    - 必要且耗时：启动初始化，考虑用线程来初始化。
-    - 必要不耗时：首页绘制。
-    - 非必要但耗时：数据上报、插件初始化。
-    - 非必要不耗时：不用想，这块直接去掉，在需要用的时再加载。
-- 优化思路
-    - 按需实现加载逻辑，采取分步加载、异步加载、延期加载策略
-    - 分布加载：以大化小，优先级高的放到前面
-    - 异步加载：耗时多的可以异步话
-    - 延期加载：非必要的数据可以延期加载
-
-
-### 04.启动代码执行耗时
-#### 4.1 启动阶段代码梳理
-- 梳理从application--->splash--->main页面每个调用方法的执行耗时
-
-
-#### 4.2 收集耗时信息
-- 思路：通过在函数之间插桩收集函数运行数据，待首页接口数据回来后，根据插桩的数据，从中统计关键节点耗时信息，最后通过一个埋点上报。
-- 耗时较长方法收集
-(1) 因为每个阶段任务不一致，耗时会有很大差异，并不能以耗时多作为可优化点。
-(2)关键阶段还包含很多方法，不能确定哪一个方法需要优化。因此，我们需要一个更加详细的方法耗时，帮助我们判断哪一个方法应该被优化。
-
-
-
-
-### 01.如何获取启动时间
-- 要想提升APP启动时的性能，加快启动速度，首先我们应该正确的获取和分析应用的启动时间和性能。
-- 为了正确诊断应用的启动时间和性能，我们可以跟踪一些显示应用启动所需时间的指标。
-
-
-#### 1.1 使用命令行方式获取
+##### 2.6.1 adb获取冷启动时间
 - 可以通过adb命令，使用am服务来获取冷启动时间：
     ```
     adb shell am start -S -R 10 -W com.yc.ycandroidtool/包名.MainActivity
-    adb shell am start -W [packageName]/[packageName.MainActivity]
+    adb shell am start -W [packageName]/[MainActivity路径]
     ```
 - 或
     ```
@@ -217,6 +156,64 @@
     - 通过 TraceView 主要可以得到两种数据：单次执行耗时的方法 以及 执行次数多的方法。但是TraceView 性能耗损太大，不能比较正确反映真实情况。
 - Systrace
     - Systrace 能够追踪关键系统调用的耗时情况，如系统的 IO 操作、内核工作队列、CPU 负载、Surface 渲染、GC 事件以及 Android 各个子系统的运行状况等。但是不支持应用程序代码的耗时分析。
+
+
+
+
+### 03.启动优化思路分析
+#### 3.1 优化如何着手
+- 提高app的启动速度，加快Application的执行时间也是一个很重要的方面，这里我暂时总结了几条原则：
+    - 尽量不将一些业务逻辑放于Application中；
+    - Application尽量不以静态变量的方式保存应用数据；
+    - 若App的大小不是特别大无需使用dex分包方案；
+    - 在Application中关于文件，数据库等耗时的操作尽量放到IntentService线程中处理
+    - 不要做有关于循环的操作
+- 常见的启动优化方式大概有这些：
+    - MultipDex优化
+    - 第三方库懒加载
+    - WebView优化
+    - 线程优化
+    - 系统调用优化
+- 启动页面屏蔽返回按键
+    - 一般App中都会在启动页面执行一些初始化配置等，所以这时候启动页加载时不希望用户通过按下返回按键退出App，因而可以在启动页中屏蔽返回按键
+- 知道了 attachBaseContext 、onCreate  在应用中最先启动，那么我们就可以通过 TreceView 等性能检测工具，来检测具体函数耗时时间，然后来对其做具体的优化。
+    - 1.项目不及时需要的代码通过异步加载。
+    - 2.将对一些使用率不高的初始化，做懒加载。
+    - 3.将对一些耗时任务通过开启一个 IntentService来处理。
+    - 4.还通过 redex 重排列 class 文件，将启动阶段需要用到的文件在 APK 文件中排布在一起，尽可能的利用 Linux 文件系统的 pagecache 机制，用最少的磁盘 IO 次数，读取尽可能多的启动阶段需要的文件，减少 IO 开销，从而达到提升启动性能的目的。
+    - 5.通过抖音发布的文章知晓在 5.0 低版本可以做 MultiDex 优化，在第一次启动的时候，直接加载没有经过 OPT 优化的原始 DEX，先使得 APP 能够正常启动。然后在后台启动一个单独进程，慢慢地做完 DEX 的 OPT 工作，尽可能避免影响到前台 APP 的正常使用。
+
+
+#### 3.2 业务梳理优化思路
+- 不要一股脑把全部初始化工作放在 Application 中做。
+    - 需要梳理清楚当前启动过程正在运行的每一个模块，哪些是一定需要的、哪些可以砍掉、哪些可以懒加载。
+    - 但是需要注意的是，懒加载要防止集中化，否则容易出现首页显示后用户无法操作的情形。
+- 总的来说，用以下四个维度分整理启动的各个点：
+    - 必要且耗时：启动初始化，考虑用线程来初始化。
+    - 必要不耗时：首页绘制。
+    - 非必要但耗时：数据上报、插件初始化。
+    - 非必要不耗时：不用想，这块直接去掉，在需要用的时再加载。
+- 优化思路
+    - 按需实现加载逻辑，采取分步加载、异步加载、延期加载策略
+    - 分布加载：以大化小，优先级高的放到前面
+    - 异步加载：耗时多的可以异步话
+    - 延期加载：非必要的数据可以延期加载
+
+
+### 04.启动代码执行耗时
+#### 4.1 启动阶段代码梳理
+- 梳理从application--->splash--->main页面每个调用方法的执行耗时
+
+
+#### 4.2 收集耗时信息
+- 思路：通过在函数之间插桩收集函数运行数据，待首页接口数据回来后，根据插桩的数据，从中统计关键节点耗时信息，最后通过一个埋点上报。
+- 耗时较长方法收集
+(1) 因为每个阶段任务不一致，耗时会有很大差异，并不能以耗时多作为可优化点。
+(2)关键阶段还包含很多方法，不能确定哪一个方法需要优化。因此，我们需要一个更加详细的方法耗时，帮助我们判断哪一个方法应该被优化。
+
+
+
+
 
 
 ### 02.获取完全显示时间
