--- a/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
@@ -12,12 +12,15 @@
     - 2.4 什么是温启动
     - 2.5 启动流程优化点
     - 2.6 冷启动时间检测
+    - 2.7 MultiDex耗时
 - 03.启动优化思路分析
     - 3.1 优化如何着手
     - 3.2 业务梳理优化思路
+    - 3.3 任务调度优化
 - 04.启动优化实践操作
     - 4.1 启动阶段代码梳理
     - 4.2 收集耗时信息
+    - 4.4 任务调度实践
 - 05.方案基础设计
     - 5.1 整体架构图
     - 5.2 UML设计图
@@ -101,62 +104,55 @@
 
 
 ##### 2.6.1 adb获取冷启动时间
-- 可以通过adb命令，使用am服务来获取冷启动时间：
+- 可以通过adb命令，使用am服务来获取冷启动时间。指令的含义: -S表示每次启动前先强行停止；-R表示重复测试次数。
     ```
     adb shell am start -S -R 10 -W com.yc.ycandroidtool/包名.MainActivity
     adb shell am start -W [packageName]/[MainActivity路径]
     ```
-- 或
-    ```
-    adb [-d|-e|-s <serialNumber>] shell am start -S -W
-        com.yc.ycandroidtool/.MainActivity
-        -c android.intent.category.LAUNCHER
-        -a android.intent.action.MAIN
-    ```
-- 指令的含义
-    - -S表示每次启动前先强行停止；
-    - -R表示重复测试次数。
-    - -c 和 -a 为可选参数，可以为 intent 指定 和 。
-- 执行结果如下：
-    ```
-    Starting: Intent
-        Activity: com.yc.ycandroidtool/.MainActivity
-        ThisTime: 2044
-        TotalTime: 2044
-        WaitTime: 2054
-        Complete
-    ```
+- 结果显示： TotalTime：应用的启动时间，包括创建进程+Application初始化+Activity初始化到界面显示；WaitTime：一般比TotalTime大点，是AMS启动Activity的总耗时。
 
 
-#### 1.2 通过logcat获取
+
+##### 2.6.2 通过logcat获取
 - 在 Android 4.4（API 级别 19）及更高版本中，logcat 包含一个输出行，其中包含名为 Displayed 的值。
     - 此值代表从启动进程到在屏幕上完成对应 Activity 的绘制所用的时间。这个方法比较适合测量程序的启动时间。报告的日志行类似于以下示例：
     ```
     ActivityManager: Displayed com.yc.ycandroidtool/.StartupTiming: +3s534ms
     ```
-- 以上时间包含以下事件序列：
-    - 启动进程。
-    - 初始化对象。
-    - 创建并初始化 Activity。
-    - 扩充布局。
-    - 首次绘制应用。
-- 这个信息在 Activity 窗口完成所有的启动事件之后，第一次绘制的时候输出。
-    - 这个时间包括了从启动进程到第一次布局与绘制的所有时间。这基本上是你需要知道的主要时间。它不包含用户点击app图标然后系统开始准备启动activity的时间，这是ok的，因为作为一个开发者你无法影响这个时间，所以没有必要去测量它。
+- 以上时间包含以下事件序列：启动进程。初始化对象。创建并初始化 Activity。扩充布局。首次绘制应用。
+- 这个信息在 Activity 窗口完成所有的启动事件之后，第一次绘制的时候输出。这个时间包括了从启动进程到第一次布局与绘制的所有时间。这基本上是你需要知道的主要时间。它不包含用户点击app图标然后系统开始准备启动activity的时间，这是ok的，因为作为一个开发者你无法影响这个时间，所以没有必要去测量它。
 
 
-#### 1.3 代码方式埋点
+##### 2.6.3 代码方式埋点
 - 代码方式埋点如何做
     - 通过代码埋点来准确获取记录每个方法的执行时间，知道哪些地方耗时，然后再有针对性地优化。例如通过在 app 启动生命周期中，关键位置加入时间点记录，达到测量目的。
 - 问题
     - 从用户点击 app Icon 到 Application 被创建，再到 Activity 的渲染，中间还是有很多步骤的，比如冷启动的进程创建过程，而这个时间用此版本是没办法统计了，必须得承受这点数据的不准确性。
 
 
-#### 1.4 其他方式有哪些
+##### 2.6.4 其他方式有哪些
 - TraceView
     - 通过 TraceView 主要可以得到两种数据：单次执行耗时的方法 以及 执行次数多的方法。但是TraceView 性能耗损太大，不能比较正确反映真实情况。
 - Systrace
     - Systrace 能够追踪关键系统调用的耗时情况，如系统的 IO 操作、内核工作队列、CPU 负载、Surface 渲染、GC 事件以及 Android 各个子系统的运行状况等。但是不支持应用程序代码的耗时分析。
 
+
+##### 2.6.5 获取完全显示时间
+- 通常来说会使用异步懒加载的方式来提升程序画面的显示速度
+    - 这通常会导致的一个问题是，程序画面已经显示，可是内容却还在加载中。为了衡量这些异步加载资源所耗费的时间，我们可以在异步加载完毕之后调用 activity.reportFullyDrawn() 方法来告诉系统此时的状态，以便获取整个加载的耗时。在应用执行延迟加载时，此数据会很有用。
+- 获取时间可能不太准
+    - 如果由于延迟加载，应用的初步显示不包括所有资源，我们可能需要将完全加载和显示所有资源及视图视为单独的指标：例如，你的界面可能已完全加载，并绘制了一些文本，但尚未显示应用必须从网络中获取的图片。
+    - 要解决此问题，你可以手动调用 reportFullyDrawn()，让系统知道你的 Activity 已完成延迟加载。
+    - 当你使用此方法时，logcat 显示的值为从创建应用对象到调用 reportFullyDrawn() 时所用的时间。
+- 获取完全显示时间有哪些方式
+    - 待完善
+
+
+
+#### 2.7 MultiDex耗时
+- 在apk编译流程中，将class文件转换成dex文件，默认只会生成一个dex文件，单个dex文件中的方法数不能超过65536，不然编译会报错。
+- 整个App的方法数一般都是超过65536的，解决办法就是：一个dex不够用，那就多来几个dex，gradle增加一行配置即可(multiDexEnabled true)。
+- ClassLoader如何从dex1，dex2，dex3中找到对应的类？
 
 
 
@@ -200,31 +196,13 @@
     - 延期加载：非必要的数据可以延期加载
 
 
-### 04.启动代码执行耗时
-#### 4.1 启动阶段代码梳理
-- 梳理从application--->splash--->main页面每个调用方法的执行耗时
+#### 3.3 任务调度优化
+- 把主线程的串行任务变成并发任务
+    - 提起并发，在Android最常用的基本就是AsyncTask和线程池，把所有任务都放在子线程里去调度是否真的会减少冷启动时间，减少的时间比起我们改造的成本来说，收益大不大，是不是最优解，都是我们需要着重考虑的问题，所以，如何选择合适的线程池是最先需要解决的问题。
 
 
-#### 4.2 收集耗时信息
-- 思路：通过在函数之间插桩收集函数运行数据，待首页接口数据回来后，根据插桩的数据，从中统计关键节点耗时信息，最后通过一个埋点上报。
-- 耗时较长方法收集
-(1) 因为每个阶段任务不一致，耗时会有很大差异，并不能以耗时多作为可优化点。
-(2)关键阶段还包含很多方法，不能确定哪一个方法需要优化。因此，我们需要一个更加详细的方法耗时，帮助我们判断哪一个方法应该被优化。
-
-
-
-
-
-
-### 02.获取完全显示时间
-- 通常来说会使用异步懒加载的方式来提升程序画面的显示速度
-    - 这通常会导致的一个问题是，程序画面已经显示，可是内容却还在加载中。为了衡量这些异步加载资源所耗费的时间，我们可以在异步加载完毕之后调用 activity.reportFullyDrawn() 方法来告诉系统此时的状态，以便获取整个加载的耗时。在应用执行延迟加载时，此数据会很有用。
-- 获取时间可能不太准
-    - 如果由于延迟加载，应用的初步显示不包括所有资源，我们可能需要将完全加载和显示所有资源及视图视为单独的指标：例如，你的界面可能已完全加载，并绘制了一些文本，但尚未显示应用必须从网络中获取的图片。
-    - 要解决此问题，你可以手动调用 reportFullyDrawn()，让系统知道你的 Activity 已完成延迟加载。
-    - 当你使用此方法时，logcat 显示的值为从创建应用对象到调用 reportFullyDrawn() 时所用的时间。
-- 获取完全显示时间有哪些方式
-    - 待完善
+### 04.启动优化实践操作
+#### 4.4 任务调度实践
 
 
 
