--- a/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
@@ -21,6 +21,7 @@
     - 4.1 启动阶段代码梳理
     - 4.2 收集耗时信息
     - 4.4 任务调度实践
+    - 4.7 App启动白屏优化
 - 05.方案基础设计
     - 5.1 整体架构图
     - 5.2 UML设计图
@@ -201,46 +202,46 @@
     - 提起并发，在Android最常用的基本就是AsyncTask和线程池，把所有任务都放在子线程里去调度是否真的会减少冷启动时间，减少的时间比起我们改造的成本来说，收益大不大，是不是最优解，都是我们需要着重考虑的问题，所以，如何选择合适的线程池是最先需要解决的问题。
 
 
+
+
 ### 04.启动优化实践操作
 #### 4.4 任务调度实践
+- 选择何时调度线程池
+    - 线程，它是CPU任务调度的基本单位，而并发的本质就是共享CPU的时间片，所以，如果在线程池中的任务极大的消耗了CPU的资源，这就会导致一个直观的问题，看似串行任务变成了多线程并发任务，却造成了主线程卡顿，导致我们的所作所为出现了副作用。
+    - 关于线程池的选择，在这种场景下，最优的选择无非就是定容线程池，缓存线程池，但是到底该用哪种，又或者说两者都用的时候，任务该如何决定使用哪个线程池，发现问题就预示着我们已经解决了该问题的一半。
+- 如何确定选择任务是CPU型还是IO型任务
+    - 一个任务是否是CPU消耗型的任务（比如运算类的操作），还是说IO类型的任务（内存分配型），前者消耗的CPU时间片较多，我们就把它放在定容线程池里调度，后者消耗的时间片少，就把它放在缓存线程池中，技能充分的调用CPU资源，又不容易过度占用CPU，使得任务并发运行，达到时间优化的目的。
 
 
 
-### 05.App启动白屏优化
-#### 5.1 存在白屏问题
-- 出现问题描述
-    - android app启动页面黑屏的问题，android开发app启动时若没有做特殊处理的话，会出现一瞬间的白屏现象。
-    - 即使你启动页界面就加载一个布局，不做其他耗时处理，貌似也会出现一瞬间的白屏问题。注意，有些地方也称黑屏，主要是看你给app设置的style样式。
-    - 当从桌面 Launcher 的小图标点击冷启动一个 App 的时候，程序需要进行一些基本的初始化操作，例如在Application 或者SplashActivity中做了很多耗时操作，例如初始化第三方SDK等,当手机性能不好，配置不高时，该现象尤其明显。
+#### 4.7 App启动白屏优化
+##### 4.7.1 启动白屏说明
+- 存在白屏问题描述
+    - android app启动页面黑屏的问题，android开发app启动时若没有做特殊处理的话，会出现一瞬间的白屏现象。即使你启动页界面就加载一个布局，不做其他耗时处理，貌似也会出现一瞬间的白屏问题。注意，有些地方也称黑屏，主要是看你给app设置的style样式。
 - 为什么存在这个问题
     - 当系统启动一个APP时，zygote进程会首先创建一个新的进程去运行这个APP，但是进程的创建是需要时间的，在创建完成之前，界面是呈现假死状态，于是系统根据你的manifest文件设置的主题颜色的不同来展示一个白屏或者黑屏。而这个黑（白）屏正式的称呼应该是Preview Window，即预览窗口。
-    - 实际上就是是activity默认的主题中的android:windowBackground为白色或者黑色导致的。
-    - 总结来说启动顺序就是：app启动——Preview Window(也称为预览窗口)——启动页
+    - 实际上就是是activity默认的主题中的android:windowBackground为白色或者黑色导致的。总结来说启动顺序就是：app启动——Preview Window(也称为预览窗口)——启动页
 
 
-#### 5.2 解决白屏的办法
+##### 4.7.2 设置背景style样式
 - 解决方案分析
     - Android在选择展示黑屏或者白屏的时候，是根据你设定的主题而不同的，也就是说，虽然你的代码没有被执行，你的配置文件却被提前读取了，用来作为展示Preview Window界面的依据。所以，解决方案的切入口就是整个APP的manifest文件，更确切的说应该是主题配置文件。
     - 设置配置文件style样式中的windowBackground这个属性来显示一张背景图还有一个效果就是启动应用程序会感觉非常快，而且与加载MainActivity的contentView是异步的。
-
-
-#### 5.3 第一种解决方案
-- 解决办法：给当前启动页添加一个有背景的style样式
-    - 设置style样式如下
-    ```
+- 第一种解决方案：给当前启动页添加一个有背景的style样式
+    - 设置style样式如下，设置
+    ``` java
     <style name="SplashTheme" parent="AppTheme">
         <item name="android:windowBackground">@mipmap/splash</item>
         <item name="android:statusBarColor" tools:ignore="NewApi">@color/white</item>
         <item name="android:windowIsTranslucent">true</item>
     </style>
-    ```
+    ``` java
     - 注意，在清单文件中
     ```
     <activity android:name=".SplashActivity"
         android:theme="@style/SplashTheme">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
-    
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
     </activity>
@@ -249,7 +250,7 @@
     - 将主题设置到启动的Activity的主题中，windowBackground就是即将展示的preview window。其中splash可以是一整张图片，它也可以是一个能解析出图片资源的XML文件。
 - 该方案注意要点
     - 给Preview Window设置的背景图如果不做处理，图片就会一直存在于内存中，所以，当我们进入到欢迎页的时候，不要忘了把背景图设置为空
-    ```
+    ``` java
     @Override
     protected void onCreate(@Nullable Bundle savedInstanceState) {
         //将window的背景图设置为空
@@ -258,13 +259,12 @@
     }
     ```
 - 这样操作如何屏幕适配呢？
-    - 这样通过样式style设置SplashActivity加载图，不能像imageView那样可以设置缩放功能，因此可以采用.9图片。
-    - 以前有开发者采用我的这个建议，直接设置图，没有做适配，也无伤大雅，具体要看UI要求呢！
+    - 这样通过样式style设置SplashActivity加载图，不能像imageView那样可以设置缩放功能，因此可以采用.9图片。以前有开发者采用我的这个建议，直接设置图，没有做适配，也无伤大雅，具体要看UI要求呢！
 
 
-#### 5.4 第二种解决方案
+##### 4.7.3 禁止加载Preview
 - 禁止加载Preview Window，具体做法如下：
-    ```
+    ``` xml
     <style name="SplashTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowDisablePreview">true</item>
     </style>
@@ -274,12 +274,6 @@
     - 通过设置android:windowDisablePreview属性，禁用窗口的预览动画，在SplashActivity显示之前，系统永远不会使用窗口的主题来显示它的预览，这也保证了不会出现白屏或者黑屏。但是，与设置android:windowIsTranslucent属性一样，如果在SplashActivity启动的时候，有过多复杂的操作，就会出现在手机中点击了应用程序的图标，但过n秒才会打开应用程序不好的卡顿体验效果。
 - 该方案是否有缺点？
     - 这种方法有个小缺点，就是点击后短暂的那几百毫秒没有反应，就好像“假死”了一样，过了一会儿才跳出我们应用程序的第一个Activity，如果你不想让你的 App 有这个短暂“假死”时间，建议使用第一种方法。
-
-
-#### 5.5 注意一些要点
-- 不管是那种方式，都可以解决问题。注意的是有些手机标题栏和状态栏也会影响这两图层的，造成抖动效果，为了避免这种情况需要处理状态栏问题。这里可以直接引用我封装的状态栏库，有兴趣可以了解下，直接拿来用：https://github.com/yangchong211/YCStatusBar
-
-
 
 
 
