--- a/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
@@ -299,3 +299,14 @@
 - https://blog.csdn.net/u011578734/article/details/110002688
 - https://github.com/bingoogolapple/AppInit
 - https://github.com/aiceking/AppStartFaster
+
+
+
+
+武汉晴川学院【民办高校】【通信工程，软件工程等】本科普通类专业有21000、22000元/年等不同标准
+湖北工业大学工程技术学院【民办大学】【通信，电子信息，软件工程】本科专业有16000、18000、21000、22000元/年等不同标准
+武汉生物工程学院【民办高校】【通信，电子信息，软件工程】普通专业19000、19800元/年
+武汉城市学院【民办大学】【电子，计算机，建筑】本科普通类专业有20800、21800、22800元/年
+武汉工程大学邮电学院【民办大学】【电子，计算机，建筑】本科普通类专业每年1.9万元
+武昌工学院【民办高校】【电子，计算机，建筑】普通类专业学费22000-26300元/年
+
