--- a/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
@@ -21,6 +21,7 @@
     - 4.1 启动阶段代码梳理
     - 4.2 收集耗时信息
     - 4.4 任务调度实践
+    - 4.5 并发控制顺序
     - 4.7 App启动白屏优化
 - 05.方案基础设计
     - 5.1 整体架构图
@@ -211,6 +212,23 @@
     - 关于线程池的选择，在这种场景下，最优的选择无非就是定容线程池，缓存线程池，但是到底该用哪种，又或者说两者都用的时候，任务该如何决定使用哪个线程池，发现问题就预示着我们已经解决了该问题的一半。
 - 如何确定选择任务是CPU型还是IO型任务
     - 一个任务是否是CPU消耗型的任务（比如运算类的操作），还是说IO类型的任务（内存分配型），前者消耗的CPU时间片较多，我们就把它放在定容线程池里调度，后者消耗的时间片少，就把它放在缓存线程池中，技能充分的调用CPU资源，又不容易过度占用CPU，使得任务并发运行，达到时间优化的目的。
+- 怎么确定一个任务耗时分析
+    - 借助工具：SysTrace。待完善
+
+
+#### 4.5 并发控制顺序
+- 多线程并发时，并且使用的不同的线程池后，这些任务执行的顺序问题又该如何解决呢。
+    - 有向无环图这个数据结构完美的解决了我们的问题。其实就是每个任务用countDownLatch来标记入度。如下所示
+    ```
+    任务1    任务2
+        任务3
+        任务4
+    任务5    任务6
+        任务7
+    ```
+- 任务执行等待问题
+    - 实际开发中经常会遇到这种场景，SplashActivity的启动必须依赖于某个库初始化完成才行，简单来说就是在application中阻塞执行这个任务。
+    - 基于多线程并发任务调度，最简便的方法就是任务管理器使用CountDownLatch，在任务开始执行时调用countDownLatch.await()，在构造图结构时，把需要在application中阻塞执行的任务标记好，然后每执行完一个任务countDownLatch.countDown()，直到所有阻塞任务都执行完毕后，阻塞结束。
 
 
 
@@ -237,7 +255,7 @@
     </style>
     ``` java
     - 注意，在清单文件中
-    ```
+    ``` xml
     <activity android:name=".SplashActivity"
         android:theme="@style/SplashTheme">
         <intent-filter>
@@ -301,12 +319,4 @@
 - https://github.com/aiceking/AppStartFaster
 
 
-
-
-武汉晴川学院【民办高校】【通信工程，软件工程等】本科普通类专业有21000、22000元/年等不同标准
-湖北工业大学工程技术学院【民办大学】【通信，电子信息，软件工程】本科专业有16000、18000、21000、22000元/年等不同标准
-武汉生物工程学院【民办高校】【通信，电子信息，软件工程】普通专业19000、19800元/年
-武汉城市学院【民办大学】【电子，计算机，建筑】本科普通类专业有20800、21800、22800元/年
-武汉工程大学邮电学院【民办大学】【电子，计算机，建筑】本科普通类专业每年1.9万元
-武昌工学院【民办高校】【电子，计算机，建筑】普通类专业学费22000-26300元/年
 
