--- a/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
@@ -9,11 +9,18 @@
     - 2.2 蓝牙必备点
     - 2.3 配对和连接区别
     - 2.4 连接技术分类
+    - 2.5 官方实践步骤
 - 03.蓝牙实践思路
-    - 3.1 蓝牙最简单实践
+    - 3.1 简单开发的步骤
     - 3.2 一些核心类说明
-    - 3.3 简单开发的步骤
-- 04.蓝牙实践坑
+    - 3.3 扫描开始和停止
+    - 3.4 查找蓝牙设备
+    - 3.5 匹配蓝牙配对
+    - 3.6 配对后连接蓝牙
+    - 3.7 蓝牙数据传递
+    - 3.8 设置扫描规则 
+- 04.蓝牙实践技术点
+    - 4.3 蓝牙功耗优化
 - 05.方案设计
     - 5.1 整体架构图
     - 5.2 UML设计图
@@ -27,6 +34,8 @@
     - 6.3 灰度设计
     - 6.4 降级设计
     - 6.5 异常设计
+    - 6.6 兼容性设计
+    - 6.7 蓝牙实践坑
 - 07.项目优化点说明
 
 
@@ -81,9 +90,7 @@
     - 待完善
 
 
-
-### 03.蓝牙实践思路
-#### 3.1 蓝牙最简单实践
+#### 2.5 官方实践步骤
 - 第一步：设置蓝牙
     - 验证设备支持蓝牙，确保在此情况下启用该功能。然后代码获取蓝牙bluetoothAdapter，然后可以通过该对象判断蓝牙是否启用
 - 第二步：查找设备
@@ -92,8 +99,28 @@
     - 发现设备。调用 startDiscovery()，异步检索，会对发现的每台设备进行页面扫描，以检索其蓝牙名称。
 - 第三步：连接设备
     - 在两台设备之间创建连接，必须同时实现服务器端和客户端机制，因为其中一台设备必须开放服务器套接字，而另一台设备必须使用服务器设备的 MAC 地址发起连接。
+    - 通过调用bluetoothDevice.connectGatt，连接到此设备托管的GATT服务器，该方法返回对象可以来执行GATT客户端操作。
 - 第四步：管理连接后数据传递
     - 成功连接多台设备后，每台设备都会有已连接的 BluetoothSocket。然后使用 BluetoothSocket 传输数据。
+
+
+
+### 03.蓝牙实践思路
+#### 3.1 简单开发的步骤
+- 总体流程：
+    - 发现蓝牙->配对蓝牙->连接蓝牙->数据交互
+- 第一步：设置蓝牙
+    - 首先需要动态申请蓝牙和定位权限，否则无法获取到蓝牙列表数据。然后检查设备是否支持蓝牙，并不是所有的Android 设备都支持蓝牙，所以在使用之前，检测当前设备是否支持蓝牙。
+    - 开启蓝牙，先检测蓝牙是否打开。没有打开则提示用户打开，或者直接打开。
+- 第二步：查找设备
+    - 设置可被发现，蓝牙打开后，要将自身设置为可以被周边蓝牙搜索到，以便可以进行下一步操作。蓝牙默认可被周边设备在120秒内搜索到，最长设置不过300秒。
+    - 收集周边蓝牙设备，通过注册广播监听，对发现的蓝牙设备添加到集合中。
+- 第三步：连接设备
+    - 获取设备详情，获取蓝牙列表之后，点击对应的蓝牙，进入蓝牙详情。一个BluetoothDeviced对象代表着一个周边蓝牙设备，通过该对象，可以获取该蓝牙设备的名称，绑定状态，Mac地址，uuid等。
+    - 未配对蓝牙设备通过mDevice.createBond();进行配对。
+- 第四步：管理连接后数据传递
+    - 配对成功后，通过BluetoothDevice的createRfcommSocketToServiceRecord()方法和蓝牙设备连接，连接成功会返回BluetoothSocket对象，进而获得输入输出流，进行数据交互。
+
 
 
 
@@ -113,21 +140,79 @@
 
 
 
-#### 3.3 简单开发的步骤
-- 总体流程：
-    - 发现蓝牙->配对蓝牙->连接蓝牙->数据交互
-- 第一步：设置蓝牙
-    - 首先需要动态申请蓝牙和定位权限，否则无法获取到蓝牙列表数据。
-    - 然后检查设备是否支持蓝牙，并不是所有的Android 设备都支持蓝牙，所以在使用之前，检测当前设备是否支持蓝牙。
-    - 开启蓝牙，先检测蓝牙是否打开。没有打开则提示用户打开，或者直接打开。
-- 第二步：查找设备
-    - 设置可被发现，蓝牙打开后，要将自身设置为可以被周边蓝牙搜索到，以便可以进行下一步操作。蓝牙默认可被周边设备在120秒内搜索到，最长设置不过300秒。
-    - 收集周边蓝牙设备，通过注册广播监听，对发现的蓝牙设备添加到集合中。
-- 第三步：连接设备
-    - 获取设备详情，获取蓝牙列表之后，点击对应的蓝牙，进入蓝牙详情。一个BluetoothDeviced对象代表着一个周边蓝牙设备，通过该对象，可以获取该蓝牙设备的名称，绑定状态，Mac地址，uuid等。
-    - 未配对蓝牙设备通过mDevice.createBond();进行配对。
-- 第四步：管理连接后数据传递
-    - 配对成功后，通过BluetoothDevice的createRfcommSocketToServiceRecord()方法和蓝牙设备连接，连接成功会返回BluetoothSocket对象，进而获得输入输出流，进行数据交互。
+#### 3.3 扫描开始和停止
+- 开始扫描api说明
+    - bluetoothAdapter.startLeScan，这个方法是启动蓝牙LE设备的扫描，查找发布给定服务的设备。不过这个方法显示过时
+    - bluetoothLeScanner.startScan，这个方法在21以上使用，开启蓝牙扫描，主要增加了屏幕灭和亮蓝牙扫描停止和恢复功能
+- 停止扫描api说明
+    - bluetoothAdapter.stopLeScan，这个方法是关闭蓝牙LE设备的扫描，不过这个方法显示过时
+    - bluetoothLeScanner.stopScan，这个方法在21以上使用，停止正在进行的蓝牙LE扫描
+- 开始扫描中的状态
+    - 开始扫描后，可以定义状态接口(有开始扫描，扫描中，扫描完成等)
+- 监听蓝牙开启和关闭
+    - 可以通过注册广播来监听，当action为BluetoothAdapter.ACTION_STATE_CHANGED时，获取蓝牙状态即可判断判断开启和关闭
+
+
+
+#### 3.4 查找蓝牙设备
+- 首先搞明白一个概念
+    - 蓝牙在扫描中，是一条条查找到设备的。蓝牙扫描完毕，可以获取所有识别的蓝牙设备。
+- 如何获取扫描的蓝牙设备
+    - 如果是使用bluetoothAdapter.startLeScan扫描设备，通过LeScanCallback.onLeScan回调扫描发现的蓝牙。发现一个蓝牙设备则会回调一次。
+    - 如果是使用bluetoothLeScanner.startScan扫描设备，通过ScanCallback.onScanResult和ScanCallback.onBatchScanResults获取发现的蓝牙设备。
+- 如果过滤一些设备呢
+    - 作为线上蓝牙库，当然希望只是扫描特定智能设备的一些蓝牙，该怎么处理？可以添加过滤隐私，这个就是蓝牙设备的uuid。
+    - 如果是bluetoothAdapter.startLeScan扫描设备，则是startLeScan(serviceUuids, callback)，传递uuid数组即可。
+    - 如果是bluetoothLeScanner.startScan扫描设备，则是startScan(listOf(scanFilter), scanSettings, scanCallBack)，传递scanFilter(包装版的uuid)
+
+
+
+#### 3.5 匹配蓝牙配对
+
+
+#### 3.6 配对后连接蓝牙
+
+
+#### 3.7 蓝牙数据传递
+
+
+
+#### 3.8 设置扫描规则 
+
+
+
+### 04.蓝牙实践技术点
+
+
+#### 4.3 蓝牙功耗优化
+
+
+### 06.稳定性实践说明
+#### 6.1 性能设计
+
+
+
+#### 6.2 稳定性设计
+
+
+
+#### 6.3 灰度设计
+
+
+#### 6.4 降级设计
+
+
+#### 6.5 异常设计
+- 蓝牙在扫描过程中回调了失败该如何处理？
+    - 如果是使用bluetoothAdapter.startLeScan扫描设备，则没有处理回调失败的逻辑
+    - 如果是使用bluetoothLeScanner.startScan扫描设备，通过ScanCallback.onScanFailed回调失败的原因，这个时候可以给开发回调失败然后终止扫描。
+
+
+
+#### 6.6 兼容性设计
+
+
+#### 6.7 蓝牙实践坑
 
 
 
