--- a/Read/ReadMeWiki/01.大型方案/02.Apt实现组件接口通信.md
+++ b/Read/ReadMeWiki/01.大型方案/02.Apt实现组件接口通信.md
@@ -149,8 +149,11 @@
     - 静态代理的实现模式 = 接口(抽象类) + 具体实现类(委托类) + 代理类。比如轻量级线程库中，AbsTaskExecutor(抽象类) + DefaultTaskExecutor(具体实现类) + DelegateTaskExecutor(代理类)
     - 静态代理使用分析：实现业务分工，可以很好的保护实际对象(具体实现类)的业务逻辑对外暴露，从而提高安全性；但是代理对象的一个接口只服务于一种类型的对象，很难在程序规模稍大时胜任。
 - 为何需要动态代理
+    - 静态代理的拓展性比较差，对于那些实现了之后不怎么改变的功能还可以使用，如果频繁改动，代理类也需要跟着改动。
     - 静态代理委托类必须提前创建，并将其作为代理对象的内部属性。使用中必须一个真实角色必须对应一个代理角色，大量使用会代码膨胀；如果事先并不知道真实角色（委托类），该如何使用代理呢？
 - 快速理解动态代理
+    - 动态代理场景：不需要提前创建代理对象，而是利用反射机制在运行时创建代理类，从而动态实现代理功能。具体可以看下retrofit，构建接口实例对象就可以调用网络请求，就是用动态代理。
+
 
 
 #### 3.6 apt如何生成代码
@@ -202,6 +205,21 @@
 
 
 
+
+
+可冲击
+华北理工大学
+
+较稳妥
+山西科技学院
+山西工学院
+井冈山大学
+深圳职业技术学院
+
+保底
+宁波工程学院
+武汉职业技术学院
+武汉船舶职业技术
 
 
 
