--- a/Read/ReadMeWiki/01.大型方案/24.网络请求库封装实践.md
+++ b/Read/ReadMeWiki/01.大型方案/24.网络请求库封装实践.md
@@ -5,7 +5,12 @@
     - 1.3 基础概念介绍
     - 1.4 设计目标
     - 1.5 产生收益分析
-- 02.
+- 02.网络库技术点
+- 03.网络库封装设计
+    - 3.1 网络库设计思路
+- 04.网络封装技术点
+    - 4.4 网络日志打印
+    - 4.5 网络数据加解密
 - 05.方案基础设计
     - 5.1 整体架构图
     - 5.2 UML设计图
@@ -18,6 +23,7 @@
     - 6.3 灰度设计
     - 6.4 降级设计
     - 6.5 异常设计
+    - 6.6 兼容性设计
 - 07.其他说明介绍
     - 7.1 参考链接
 
@@ -28,6 +34,14 @@
 #### 1.3 基础概念介绍
 #### 1.4 设计目标
 #### 1.5 产生收益分析
+
+
+
+### 04.网络封装技术点
+#### 4.4 网络日志打印
+
+
+#### 4.5 网络数据加解密
 
 
 
@@ -61,6 +75,8 @@
 
 
 #### 6.5 异常设计
+- 常见的网络异常有哪些
+
 
 
 ### 07.其他说明介绍
