--- a/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
@@ -20,7 +20,9 @@
     - 3.7 蓝牙数据传递
     - 3.8 设置扫描规则 
 - 04.蓝牙实践技术点
+    - 4.1 蓝牙优化点 
     - 4.3 蓝牙功耗优化
+    - 4.4 
 - 05.方案设计
     - 5.1 整体架构图
     - 5.2 UML设计图
@@ -182,6 +184,8 @@
 
 
 ### 04.蓝牙实践技术点
+#### 4.1 蓝牙优化点 
+- 从蓝牙连接，配对，传输效率三个点去做优化操作。
 
 
 #### 4.3 蓝牙功耗优化
